Bug 831794 - Variables View: allow users to override getter properties to plain value properties, r=past
UltraBlame original commit: af82229821f86d0033a8c6a731171290d32a005d

--- a/browser/themes/gnomestripe/devtools/debugger.css
+++ b/browser/themes/gnomestripe/devtools/debugger.css
@@ -1150,6 +1150,53 @@ dbg
 -
 variable
 -
+edit
+{
+background
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabview
+/
+edit
+-
+light
+.
+png
+"
+)
+center
+no
+-
+repeat
+;
+width
+:
+20px
+;
+height
+:
+16px
+;
+cursor
+:
+pointer
+;
+}
+.
+dbg
+-
+variable
+-
 throbber
 {
 background
@@ -1172,6 +1219,10 @@ loading_16
 png
 "
 )
+center
+no
+-
+repeat
 ;
 width
 :
@@ -1242,7 +1293,7 @@ margin
 -
 end
 :
-2px
+1px
 ;
 }
 .
