--- a/browser/themes/winstripe/devtools/debugger.css
+++ b/browser/themes/winstripe/devtools/debugger.css
@@ -1196,6 +1196,53 @@ dbg
 -
 variable
 -
+edit
+{
+background
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabview
+/
+edit
+-
+light
+.
+png
+"
+)
+center
+no
+-
+repeat
+;
+width
+:
+20px
+;
+height
+:
+16px
+;
+cursor
+:
+pointer
+;
+}
+.
+dbg
+-
+variable
+-
 throbber
 {
 background
@@ -1218,6 +1265,10 @@ loading_16
 png
 "
 )
+center
+no
+-
+repeat
 ;
 width
 :
@@ -1288,7 +1339,7 @@ margin
 -
 end
 :
-2px
+1px
 ;
 }
 .
