--- a/browser/themes/gnomestripe/devtools/debugger.css
+++ b/browser/themes/gnomestripe/devtools/debugger.css
@@ -1095,6 +1095,39 @@ dbg
 expression
 -
 delete
+{
+opacity
+:
+0
+;
+}
+.
+dbg
+-
+expression
+-
+delete
+:
+hover
+{
+opacity
+:
+1
+;
+}
+.
+dbg
+-
+expression
+:
+hover
+>
+.
+dbg
+-
+expression
+-
+delete
 :
 not
 (
@@ -1107,6 +1140,18 @@ opacity
 0
 .
 5
+;
+transition
+:
+opacity
+0
+.
+2s
+ease
+-
+in
+-
+out
 ;
 }
 #
@@ -1131,6 +1176,68 @@ dbg
 variable
 -
 delete
+{
+opacity
+:
+0
+;
+}
+.
+dbg
+-
+variable
+-
+delete
+:
+hover
+{
+opacity
+:
+1
+;
+}
+.
+variable
+-
+or
+-
+property
+:
+hover
+>
+.
+title
+>
+.
+dbg
+-
+variable
+-
+delete
+:
+not
+(
+:
+hover
+)
+.
+variable
+-
+or
+-
+property
+:
+focus
+>
+.
+title
+>
+.
+dbg
+-
+variable
+-
+delete
 :
 not
 (
@@ -1143,6 +1250,18 @@ opacity
 0
 .
 5
+;
+transition
+:
+opacity
+0
+.
+2s
+ease
+-
+in
+-
+out
 ;
 }
 .
