--- a/browser/themes/pinstripe/devtools/debugger.css
+++ b/browser/themes/pinstripe/devtools/debugger.css
@@ -1110,6 +1110,24 @@ expression
 -
 delete
 {
+opacity
+:
+0
+;
+}
+.
+dbg
+-
+expression
+-
+delete
+:
+not
+(
+:
+hover
+)
+{
 -
 moz
 -
@@ -1133,6 +1151,27 @@ expression
 -
 delete
 :
+hover
+{
+opacity
+:
+1
+;
+}
+.
+dbg
+-
+expression
+:
+hover
+>
+.
+dbg
+-
+expression
+-
+delete
+:
 not
 (
 :
@@ -1144,6 +1183,18 @@ opacity
 0
 .
 5
+;
+transition
+:
+opacity
+0
+.
+2s
+ease
+-
+in
+-
+out
 ;
 }
 #
@@ -1160,6 +1211,18 @@ min
 height
 :
 10px
+;
+}
+.
+dbg
+-
+variable
+-
+delete
+{
+opacity
+:
+0
 ;
 }
 .
@@ -1190,11 +1253,87 @@ rect
 16px
 )
 ;
+}
+.
+dbg
+-
+variable
+-
+delete
+:
+hover
+{
+opacity
+:
+1
+;
+}
+.
+variable
+-
+or
+-
+property
+:
+hover
+>
+.
+title
+>
+.
+dbg
+-
+variable
+-
+delete
+:
+not
+(
+:
+hover
+)
+.
+variable
+-
+or
+-
+property
+:
+focus
+>
+.
+title
+>
+.
+dbg
+-
+variable
+-
+delete
+:
+not
+(
+:
+hover
+)
+{
 opacity
 :
 0
 .
 5
+;
+transition
+:
+opacity
+0
+.
+2s
+ease
+-
+in
+-
+out
 ;
 }
 .
