--- a/browser/themes/winstripe/devtools/debugger.css
+++ b/browser/themes/winstripe/devtools/debugger.css
@@ -1104,6 +1104,24 @@ expression
 -
 delete
 {
+opacity
+:
+0
+;
+}
+.
+dbg
+-
+expression
+-
+delete
+:
+not
+(
+:
+hover
+)
+{
 -
 moz
 -
@@ -1127,6 +1145,27 @@ expression
 -
 delete
 :
+hover
+{
+opacity
+:
+1
+;
+}
+.
+dbg
+-
+expression
+:
+hover
+>
+.
+dbg
+-
+expression
+-
+delete
+:
 not
 (
 :
@@ -1138,6 +1177,18 @@ opacity
 0
 .
 5
+;
+transition
+:
+opacity
+0
+.
+2s
+ease
+-
+in
+-
+out
 ;
 }
 #
@@ -1154,6 +1205,18 @@ min
 height
 :
 10px
+;
+}
+.
+dbg
+-
+variable
+-
+delete
+{
+opacity
+:
+0
 ;
 }
 .
@@ -1184,11 +1247,87 @@ rect
 16px
 )
 ;
+}
+.
+dbg
+-
+variable
+-
+delete
+:
+hover
+{
+opacity
+:
+1
+;
+}
+.
+variable
+-
+or
+-
+property
+:
+hover
+>
+.
+title
+>
+.
+dbg
+-
+variable
+-
+delete
+:
+not
+(
+:
+hover
+)
+.
+variable
+-
+or
+-
+property
+:
+focus
+>
+.
+title
+>
+.
+dbg
+-
+variable
+-
+delete
+:
+not
+(
+:
+hover
+)
+{
 opacity
 :
 0
 .
 5
+;
+transition
+:
+opacity
+0
+.
+2s
+ease
+-
+in
+-
+out
 ;
 }
 .
