Bug 830325 - Hovering values in the Variables View should show a text cursor, r=msucan
UltraBlame original commit: 0d953b96904058d1bbe99b4e68efd2109f9bec64

--- a/browser/themes/gnomestripe/devtools/debugger.css
+++ b/browser/themes/gnomestripe/devtools/debugger.css
@@ -1602,6 +1602,23 @@ end
 }
 .
 variable
+[
+editable
+]
+>
+.
+title
+>
+.
+value
+{
+cursor
+:
+text
+;
+}
+.
+variable
 :
 not
 (
@@ -1741,6 +1758,23 @@ padding
 end
 :
 4px
+;
+}
+.
+property
+[
+editable
+]
+>
+.
+title
+>
+.
+value
+{
+cursor
+:
+text
 ;
 }
 .
