--- a/browser/themes/pinstripe/devtools/debugger.css
+++ b/browser/themes/pinstripe/devtools/debugger.css
@@ -1674,6 +1674,23 @@ end
 }
 .
 variable
+[
+editable
+]
+>
+.
+title
+>
+.
+value
+{
+cursor
+:
+text
+;
+}
+.
+variable
 :
 not
 (
@@ -1813,6 +1830,23 @@ padding
 end
 :
 4px
+;
+}
+.
+property
+[
+editable
+]
+>
+.
+title
+>
+.
+value
+{
+cursor
+:
+text
 ;
 }
 .
