--- a/browser/themes/winstripe/devtools/debugger.css
+++ b/browser/themes/winstripe/devtools/debugger.css
@@ -1668,6 +1668,23 @@ end
 }
 .
 variable
+[
+editable
+]
+>
+.
+title
+>
+.
+value
+{
+cursor
+:
+text
+;
+}
+.
+variable
 :
 not
 (
@@ -1807,6 +1824,27 @@ padding
 end
 :
 4px
+;
+cursor
+:
+text
+;
+}
+.
+property
+[
+editable
+]
+>
+.
+title
+>
+.
+value
+{
+cursor
+:
+text
 ;
 }
 .
