Bug 830324 - Show a border around the textbox when editing values in the Variables View, r=msucan
UltraBlame original commit: 73ccb94a810dde1a682db52491a8a55ba706b61f

--- a/browser/themes/gnomestripe/devtools/debugger.css
+++ b/browser/themes/gnomestripe/devtools/debugger.css
@@ -721,12 +721,6 @@ stackframes
 +
 breakpoints
 {
-background
--
-color
-:
-white
-;
 min
 -
 width
@@ -762,12 +756,6 @@ variables
 +
 expressions
 {
-background
--
-color
-:
-white
-;
 min
 -
 width
@@ -800,12 +788,6 @@ out
 #
 stackframes
 {
-background
--
-color
-:
-white
-;
 min
 -
 height
@@ -871,12 +853,6 @@ start
 #
 breakpoints
 {
-background
--
-color
-:
-white
-;
 min
 -
 height
@@ -996,12 +972,6 @@ margin
 #
 expressions
 {
-background
--
-color
-:
-white
-;
 min
 -
 height
@@ -1157,12 +1127,6 @@ out
 #
 variables
 {
-background
--
-color
-:
-white
-;
 min
 -
 height
@@ -1469,11 +1433,6 @@ solid
 #
 eee
 ;
-background
-:
-#
-fff
-;
 transition
 :
 background
@@ -1645,11 +1604,6 @@ start
 .
 property
 {
-background
-:
-#
-fff
-;
 transition
 :
 background
@@ -2305,8 +2259,6 @@ line
 through
 ;
 }
-#
-variables
 .
 element
 -
@@ -2314,16 +2266,6 @@ value
 -
 input
 {
-overflow
-:
-hidden
-;
-max
--
-width
-:
-30em
-;
 -
 moz
 -
@@ -2331,13 +2273,11 @@ margin
 -
 start
 :
-5px
+4px
 !
 important
 ;
 }
-#
-variables
 .
 element
 -
@@ -2353,7 +2293,7 @@ margin
 start
 :
 -
-1px
+2px
 !
 important
 ;
@@ -2367,6 +2307,45 @@ font
 weight
 :
 600
+;
+}
+.
+element
+-
+value
+-
+input
+.
+element
+-
+name
+-
+input
+{
+max
+-
+width
+:
+30em
+;
+border
+:
+1px
+solid
+#
+999
+!
+important
+;
+box
+-
+shadow
+:
+1px
+2px
+4px
+#
+aaa
 ;
 }
 .
