--- a/browser/themes/pinstripe/devtools/debugger.css
+++ b/browser/themes/pinstripe/devtools/debugger.css
@@ -735,12 +735,6 @@ stackframes
 +
 breakpoints
 {
-background
--
-color
-:
-white
-;
 min
 -
 width
@@ -776,12 +770,6 @@ variables
 +
 expressions
 {
-background
--
-color
-:
-white
-;
 min
 -
 width
@@ -814,12 +802,6 @@ out
 #
 stackframes
 {
-background
--
-color
-:
-white
-;
 min
 -
 height
@@ -885,12 +867,6 @@ start
 #
 breakpoints
 {
-background
--
-color
-:
-white
-;
 min
 -
 height
@@ -1010,12 +986,6 @@ margin
 #
 expressions
 {
-background
--
-color
-:
-white
-;
 min
 -
 height
@@ -1200,12 +1170,6 @@ out
 #
 variables
 {
-background
--
-color
-:
-white
-;
 min
 -
 height
@@ -1541,11 +1505,6 @@ solid
 #
 eee
 ;
-background
-:
-#
-fff
-;
 transition
 :
 background
@@ -1717,11 +1676,6 @@ start
 .
 property
 {
-background
-:
-#
-fff
-;
 transition
 :
 background
@@ -2377,8 +2331,6 @@ line
 through
 ;
 }
-#
-variables
 .
 element
 -
@@ -2386,16 +2338,6 @@ value
 -
 input
 {
-overflow
-:
-hidden
-;
-max
--
-width
-:
-30em
-;
 -
 moz
 -
@@ -2403,13 +2345,11 @@ margin
 -
 start
 :
-5px
+4px
 !
 important
 ;
 }
-#
-variables
 .
 element
 -
@@ -2425,7 +2365,7 @@ margin
 start
 :
 -
-1px
+2px
 !
 important
 ;
@@ -2439,6 +2379,45 @@ font
 weight
 :
 600
+;
+}
+.
+element
+-
+value
+-
+input
+.
+element
+-
+name
+-
+input
+{
+max
+-
+width
+:
+30em
+;
+border
+:
+1px
+solid
+#
+999
+!
+important
+;
+box
+-
+shadow
+:
+1px
+2px
+4px
+#
+aaa
 ;
 }
 .
