--- a/browser/themes/winstripe/devtools/debugger.css
+++ b/browser/themes/winstripe/devtools/debugger.css
@@ -729,12 +729,6 @@ stackframes
 +
 breakpoints
 {
-background
--
-color
-:
-white
-;
 min
 -
 width
@@ -770,12 +764,6 @@ variables
 +
 expressions
 {
-background
--
-color
-:
-white
-;
 min
 -
 width
@@ -808,12 +796,6 @@ out
 #
 stackframes
 {
-background
--
-color
-:
-white
-;
 min
 -
 height
@@ -879,12 +861,6 @@ start
 #
 breakpoints
 {
-background
--
-color
-:
-white
-;
 min
 -
 height
@@ -1004,12 +980,6 @@ margin
 #
 expressions
 {
-background
--
-color
-:
-white
-;
 min
 -
 height
@@ -1194,12 +1164,6 @@ out
 #
 variables
 {
-background
--
-color
-:
-white
-;
 min
 -
 height
@@ -1535,11 +1499,6 @@ solid
 #
 eee
 ;
-background
-:
-#
-fff
-;
 transition
 :
 background
@@ -1711,11 +1670,6 @@ start
 .
 property
 {
-background
-:
-#
-fff
-;
 transition
 :
 background
@@ -2375,8 +2329,6 @@ line
 through
 ;
 }
-#
-variables
 .
 element
 -
@@ -2384,16 +2336,6 @@ value
 -
 input
 {
-overflow
-:
-hidden
-;
-max
--
-width
-:
-30em
-;
 -
 moz
 -
@@ -2401,13 +2343,11 @@ margin
 -
 start
 :
-5px
+4px
 !
 important
 ;
 }
-#
-variables
 .
 element
 -
@@ -2423,7 +2363,7 @@ margin
 start
 :
 -
-1px
+2px
 !
 important
 ;
@@ -2437,6 +2377,45 @@ font
 weight
 :
 600
+;
+}
+.
+element
+-
+value
+-
+input
+.
+element
+-
+name
+-
+input
+{
+max
+-
+width
+:
+30em
+;
+border
+:
+1px
+solid
+#
+999
+!
+important
+;
+box
+-
+shadow
+:
+1px
+2px
+4px
+#
+aaa
 ;
 }
 .
