Bug 739217 - Part 2: docshell replacement of synchronous isVisited with asynchronous isURIVisited. r=mak
UltraBlame original commit: 5fe0fa1d1b9ed71d439a5f6dd79a45d52c4276f0

--- a/toolkit/components/places/tests/mochitest/test_bug_94514.html
+++ b/toolkit/components/places/tests/mochitest/test_bug_94514.html
@@ -181,9 +181,13 @@ test
 /
 tests
 /
-docshell
+toolkit
 /
-test
+components
+/
+places
+/
+tests
 /
 bug94514
 -
@@ -230,6 +234,27 @@ Ci
 Components
 .
 interfaces
+;
+Components
+.
+utils
+.
+import
+(
+"
+resource
+:
+/
+/
+gre
+/
+modules
+/
+PlacesUtils
+.
+jsm
+"
+)
 ;
 var
 ios
@@ -283,95 +308,9 @@ null
 )
 ;
 var
-gh
+w
 =
-Cc
-[
-"
-mozilla
-.
-org
-/
-browser
-/
-global
--
-history
-;
-2
-"
-]
-.
-getService
-(
-Ci
-.
-nsIGlobalHistory2
-)
-;
-SimpleTest
-.
-ok
-(
-!
-gh
-.
-isVisited
-(
-startPage
-)
-"
-Initial
-page
-does
-not
-start
-in
-global
-history
-.
-Note
-:
-"
-+
-"
-this
-will
-also
-fail
-if
-you
-run
-the
-test
-twice
-.
-"
-)
-;
-SimpleTest
-.
-ok
-(
-!
-gh
-.
-isVisited
-(
-postedPage
-)
-"
-Posted
-page
-does
-not
-start
-in
-global
-history
-.
-"
-)
+null
 ;
 /
 /
@@ -501,7 +440,86 @@ saved
 false
 )
 ;
-var
+PlacesUtils
+.
+asyncHistory
+.
+isURIVisited
+(
+startPage
+function
+(
+aURI
+aIsVisited
+)
+{
+SimpleTest
+.
+ok
+(
+!
+aIsVisited
+"
+Initial
+page
+does
+not
+start
+in
+global
+history
+.
+"
++
+"
+Note
+:
+this
+will
+also
+fail
+if
+you
+run
+the
+test
+twice
+.
+"
+)
+;
+PlacesUtils
+.
+asyncHistory
+.
+isURIVisited
+(
+postedPage
+function
+(
+aURI
+aIsVisited
+)
+{
+SimpleTest
+.
+ok
+(
+!
+aIsVisited
+"
+Posted
+page
+does
+not
+start
+in
+global
+history
+.
+"
+)
+;
 w
 =
 window
@@ -519,6 +537,12 @@ height
 =
 10
 "
+)
+;
+}
+)
+;
+}
 )
 ;
 function
@@ -541,16 +565,24 @@ to
 global
 history
 .
+PlacesUtils
+.
+asyncHistory
+.
+isURIVisited
+(
+startPage
+function
+(
+aURI
+aIsVisited
+)
+{
 SimpleTest
 .
 ok
 (
-gh
-.
-isVisited
-(
-startPage
-)
+aIsVisited
 "
 Initial
 page
@@ -563,17 +595,25 @@ history
 "
 )
 ;
+PlacesUtils
+.
+asyncHistory
+.
+isURIVisited
+(
+postedPage
+function
+(
+aURI
+aIsVisited
+)
+{
 SimpleTest
 .
 ok
 (
 !
-gh
-.
-isVisited
-(
-postedPage
-)
+aIsVisited
 "
 Posted
 page
@@ -597,6 +637,12 @@ SimpleTest
 .
 finish
 (
+)
+;
+}
+)
+;
+}
 )
 ;
 }
