Bug 826685 - Web Console and Inspector font is (much) larger than Debugger and StyleEditor font (sourceeditor). r=msucan
UltraBlame original commit: 43daf9e61e11a66cd2c201029d6adf5b83fe3ccb

--- a/browser/themes/gnomestripe/devtools/common.css
+++ b/browser/themes/gnomestripe/devtools/common.css
@@ -1,7 +1,5 @@
-.
-devtools
--
-monospace
+:
+root
 {
 font
 :
@@ -9,11 +7,24 @@ message
 -
 box
 ;
+}
+.
+devtools
+-
+monospace
+{
 font
 -
 family
 :
 monospace
+;
+font
+-
+size
+:
+85
+%
 ;
 }
 .
