--- a/browser/themes/pinstripe/devtools/common.css
+++ b/browser/themes/pinstripe/devtools/common.css
@@ -6,10 +6,8 @@ include
 shared
 .
 inc
-.
-devtools
--
-monospace
+:
+root
 {
 font
 :
@@ -17,6 +15,12 @@ message
 -
 box
 ;
+}
+.
+devtools
+-
+monospace
+{
 font
 -
 family
