--- a/browser/themes/winstripe/devtools/common.css
+++ b/browser/themes/winstripe/devtools/common.css
@@ -1,7 +1,5 @@
-.
-devtools
--
-monospace
+:
+root
 {
 font
 :
@@ -9,6 +7,12 @@ message
 -
 box
 ;
+}
+.
+devtools
+-
+monospace
+{
 font
 -
 family
