--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -143,6 +143,28 @@ element
 )
 ;
 }
+%
+ifdef
+XP_MACOSX
+:
+root
+[
+drawintitlebar
+=
+"
+true
+"
+]
+{
+padding
+-
+top
+:
+22px
+;
+}
+%
+endif
 :
 root
 :
