Bug 834931 - Add fullscreen buttons to video controls. r=mleibovic, a=tef+
UltraBlame original commit: d6f27aa7aa9ca22058fdb350612a6a5aeb213df0

--- a/b2g/chrome/content/touchcontrols.css
+++ b/b2g/chrome/content/touchcontrols.css
@@ -134,6 +134,8 @@ flex
 ;
 }
 .
+fullscreenButton
+.
 playButton
 .
 muteButton
@@ -165,18 +167,77 @@ important
 ;
 }
 .
+fullscreenButton
+{
+background
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+images
+/
+fullscreen
+-
+hdpi
+.
+png
+"
+)
+no
+-
+repeat
+center
+;
+}
+.
+fullscreenButton
+[
+fullscreened
+=
+"
+true
+"
+]
+{
+background
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+images
+/
+exitfullscreen
+-
+hdpi
+.
+png
+"
+)
+no
+-
+repeat
+center
+;
+}
+.
 playButton
 {
--
-moz
--
-transform
-:
-translateX
-(
-21px
-)
-;
 background
 :
 url
@@ -203,6 +264,21 @@ no
 -
 repeat
 center
+;
+}
+.
+controlBar
+.
+audio
+.
+playButton
+{
+transform
+:
+translateX
+(
+28px
+)
 ;
 }
 .
@@ -313,14 +389,6 @@ center
 ;
 }
 .
-fullscreenButton
-{
-display
-:
-none
-;
-}
-.
 scrubberStack
 {
 width
@@ -405,6 +473,12 @@ background
 color
 :
 transparent
+;
+border
+-
+radius
+:
+3px
 ;
 }
 .
@@ -839,6 +913,17 @@ true
 "
 ]
 .
+fullscreenButton
+.
+controlBar
+[
+firstshow
+=
+"
+true
+"
+]
+.
 muteButton
 .
 controlBar
@@ -866,26 +951,6 @@ durationBox
 timeLabel
 {
 display
-:
-none
-;
-}
-.
-controlBar
-[
-firstshow
-=
-"
-true
-"
-]
-.
-playButton
-{
--
-moz
--
-transform
 :
 none
 ;
