Bug 825035 - Blocklisted click-to-play notification only fades in/out once per window per session. r=jaws
UltraBlame original commit: 93bdd70980ec33dbec3fb65ca8ec85d416dcb6c4

--- a/browser/themes/gnomestripe/browser.css
+++ b/browser/themes/gnomestripe/browser.css
@@ -10535,6 +10535,28 @@ png
 ;
 }
 #
+notification
+-
+popup
+-
+box
+[
+hidden
+]
+{
+display
+:
+-
+moz
+-
+box
+;
+visibility
+:
+collapse
+;
+}
+#
 blocked
 -
 plugins
