--- a/browser/themes/pinstripe/browser.css
+++ b/browser/themes/pinstripe/browser.css
@@ -24485,6 +24485,28 @@ png
 }
 }
 #
+notification
+-
+popup
+-
+box
+[
+hidden
+]
+{
+display
+:
+-
+moz
+-
+box
+;
+visibility
+:
+collapse
+;
+}
+#
 blocked
 -
 plugins
