--- a/browser/themes/winstripe/browser.css
+++ b/browser/themes/winstripe/browser.css
@@ -18668,6 +18668,28 @@ png
 ;
 }
 #
+notification
+-
+popup
+-
+box
+[
+hidden
+]
+{
+display
+:
+-
+moz
+-
+box
+;
+visibility
+:
+collapse
+;
+}
+#
 blocked
 -
 plugins
