--- a/toolkit/themes/pinstripe/mozapps/plugins/pluginProblem.css
+++ b/toolkit/themes/pinstripe/mozapps/plugins/pluginProblem.css
@@ -20,6 +20,18 @@ xhtml
 .
 mainBox
 {
+font
+:
+message
+-
+box
+;
+font
+-
+size
+:
+12px
+;
 text
 -
 align
@@ -86,6 +98,25 @@ color
 :
 white
 ;
+text
+-
+shadow
+:
+rgba
+(
+0
+0
+0
+0
+.
+8
+)
+0
+0
+3
+.
+5px
+;
 border
 -
 radius
@@ -124,10 +155,6 @@ rgba
 2
 )
 ;
-padding
-:
-5px
-;
 -
 moz
 -
@@ -142,6 +169,14 @@ position
 relative
 ;
 }
+.
+hoverBox
+{
+padding
+:
+5px
+;
+}
 html
 |
 a
@@ -154,14 +189,16 @@ white
 .
 icon
 {
-min
+display
+:
+inline
 -
+block
+;
 width
 :
 48px
 ;
-min
--
 height
 :
 48px
@@ -179,6 +216,16 @@ repeat
 no
 -
 repeat
+;
+border
+:
+none
+;
+background
+-
+color
+:
+transparent
 ;
 }
 :
@@ -258,15 +305,6 @@ moz
 -
 handler
 -
-clicktoplay
-.
-icon
-:
--
-moz
--
-handler
--
 vulnerable
 -
 updatable
@@ -306,6 +344,93 @@ contentPluginClickToPlay
 .
 png
 )
+;
+}
+:
+-
+moz
+-
+handler
+-
+clicktoplay
+.
+icon
+{
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+mozapps
+/
+skin
+/
+plugins
+/
+contentPluginClickToPlayPlain
+.
+png
+)
+;
+background
+-
+position
+:
+0
+0
+;
+}
+:
+-
+moz
+-
+handler
+-
+clicktoplay
+.
+hoverBox
+:
+hover
+.
+icon
+{
+background
+-
+position
+:
+-
+48px
+0
+;
+}
+:
+-
+moz
+-
+handler
+-
+clicktoplay
+.
+hoverBox
+:
+hover
+:
+active
+.
+icon
+{
+background
+-
+position
+:
+-
+96px
+0
 ;
 }
 :
@@ -445,42 +570,25 @@ left
 .
 msg
 {
-font
-:
-message
--
-box
-;
-font
--
-size
-:
-12px
-;
 cursor
 :
 default
 ;
-text
--
-shadow
+width
 :
-rgba
-(
-0
-0
-0
-0
-.
-8
-)
-0
-0
-3
-.
-5px
+100
+%
 ;
 }
+:
+-
+moz
+-
+handler
+-
+clicktoplay
+.
+mainBox
 :
 -
 moz
@@ -777,4 +885,295 @@ auto
 16px
 ;
 }
+}
+:
+-
+moz
+-
+handler
+-
+clicktoplay
+.
+mainBox
+{
+background
+-
+image
+:
+none
+;
+background
+-
+color
+:
+hsla
+(
+0
+0
+%
+100
+%
+.
+2
+)
+;
+border
+:
+1px
+dashed
+hsla
+(
+0
+0
+%
+50
+%
+0
+.
+5
+)
+;
+border
+-
+radius
+:
+2
+.
+5px
+;
+color
+:
+hsl
+(
+0
+0
+%
+50
+%
+)
+;
+text
+-
+shadow
+:
+none
+;
+box
+-
+shadow
+:
+none
+;
+transition
+:
+background
+-
+color
+150ms
+ease
+;
+}
+:
+-
+moz
+-
+handler
+-
+clicktoplay
+.
+mainBox
+:
+hover
+{
+background
+-
+color
+:
+hsla
+(
+0
+0
+%
+90
+%
+.
+7
+)
+;
+}
+:
+-
+moz
+-
+handler
+-
+clicktoplay
+.
+mainBox
+:
+hover
+:
+active
+{
+background
+-
+color
+:
+hsla
+(
+0
+0
+%
+90
+%
+.
+8
+)
+;
+}
+:
+-
+moz
+-
+handler
+-
+clicktoplay
+.
+mainBox
+:
+-
+moz
+-
+handler
+-
+clicktoplay
+html
+|
+a
+{
+color
+:
+hsl
+(
+0
+0
+%
+35
+%
+)
+;
+}
+:
+-
+moz
+-
+handler
+-
+clicktoplay
+.
+hoverBox
+:
+hover
+:
+-
+moz
+-
+handler
+-
+clicktoplay
+.
+hoverBox
+:
+hover
+html
+|
+a
+{
+color
+:
+hsl
+(
+0
+0
+%
+20
+%
+)
+;
+}
+:
+-
+moz
+-
+handler
+-
+clicktoplay
+.
+hoverBox
+:
+hover
+:
+active
+:
+-
+moz
+-
+handler
+-
+clicktoplay
+.
+hoverBox
+:
+hover
+:
+active
+html
+|
+a
+{
+color
+:
+hsl
+(
+0
+0
+%
+10
+%
+)
+;
+}
+:
+-
+moz
+-
+handler
+-
+clicktoplay
+.
+closeIcon
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+mozapps
+/
+skin
+/
+plugins
+/
+contentPluginClose
+.
+png
+"
+)
+;
 }
