--- a/browser/themes/pinstripe/browser.css
+++ b/browser/themes/pinstripe/browser.css
@@ -32177,18 +32177,6 @@ size
 ;
 }
 }
-media
-(
--
-moz
--
-mac
--
-lion
--
-theme
-)
-{
 #
 main
 -
@@ -32206,6 +32194,28 @@ position
 top
 right
 40px
+;
+}
+#
+main
+-
+window
+[
+privatebrowsingmode
+=
+temporary
+]
+[
+inFullscreen
+]
+{
+background
+-
+position
+:
+top
+right
+10px
 ;
 }
 #
@@ -32237,6 +32247,37 @@ left
 70px
 ;
 }
+#
+main
+-
+window
+[
+privatebrowsingmode
+=
+temporary
+]
+[
+inFullscreen
+]
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+background
+-
+position
+:
+top
+left
+10px
+;
 }
 #
 main
@@ -32268,4 +32309,148 @@ chrome
 -
 inactive
 ;
+}
+#
+main
+-
+window
+[
+privatebrowsingmode
+=
+temporary
+]
+[
+inFullscreen
+]
+#
+nav
+-
+bar
+[
+tabsontop
+=
+false
+]
+{
+-
+moz
+-
+padding
+-
+end
+:
+50px
+!
+important
+;
+}
+media
+(
+-
+moz
+-
+mac
+-
+lion
+-
+theme
+)
+{
+#
+main
+-
+window
+[
+privatebrowsingmode
+=
+temporary
+]
+[
+inFullscreen
+]
+#
+TabsToolbar
+[
+tabsontop
+=
+true
+]
+{
+-
+moz
+-
+padding
+-
+end
+:
+50px
+;
+}
+}
+media
+not
+all
+and
+(
+-
+moz
+-
+mac
+-
+lion
+-
+theme
+)
+{
+#
+main
+-
+window
+[
+privatebrowsingmode
+=
+temporary
+]
+{
+background
+-
+position
+:
+top
+right
+10px
+;
+}
+#
+main
+-
+window
+[
+privatebrowsingmode
+=
+temporary
+]
+[
+inFullscreen
+]
+[
+tabsontop
+=
+true
+]
+#
+window
+-
+controls
+{
+-
+moz
+-
+padding
+-
+end
+:
+50px
+;
+}
 }
