Bug 838599 - Downloads Panel summary text is a little too big. r=mak.
UltraBlame original commit: e22bf3f9e372503faf7f55d9defd02dbcdc6d983

--- a/browser/themes/gnomestripe/downloads/downloads.css
+++ b/browser/themes/gnomestripe/downloads/downloads.css
@@ -483,6 +483,8 @@ png
 )
 ;
 }
+#
+downloadsSummaryDetails
 .
 downloadContainer
 {
@@ -492,6 +494,22 @@ size
 :
 90
 %
+;
+}
+#
+downloadsSummaryDescription
+.
+downloadTarget
+{
+margin
+-
+bottom
+:
+7px
+;
+cursor
+:
+inherit
 ;
 }
 .
@@ -511,17 +529,9 @@ calc
 9
 )
 ;
-margin
--
-bottom
-:
-7px
-;
-cursor
-:
-inherit
-;
 }
+#
+downloadsSummaryDetails
 .
 downloadDetails
 {
