--- a/browser/themes/pinstripe/downloads/downloads.css
+++ b/browser/themes/pinstripe/downloads/downloads.css
@@ -663,6 +663,8 @@ png
 )
 ;
 }
+#
+downloadsSummaryDetails
 .
 downloadContainer
 {
@@ -672,6 +674,22 @@ size
 :
 95
 %
+;
+}
+#
+downloadsSummaryDescription
+.
+downloadTarget
+{
+margin
+-
+bottom
+:
+6px
+;
+cursor
+:
+inherit
 ;
 }
 .
@@ -691,17 +709,9 @@ calc
 95
 )
 ;
-margin
--
-bottom
-:
-6px
-;
-cursor
-:
-inherit
-;
 }
+#
+downloadsSummaryDetails
 .
 downloadDetails
 {
