--- a/browser/themes/winstripe/downloads/downloads.css
+++ b/browser/themes/winstripe/downloads/downloads.css
@@ -542,6 +542,8 @@ png
 )
 ;
 }
+#
+downloadsSummaryDetails
 .
 downloadContainer
 {
@@ -551,6 +553,22 @@ size
 :
 90
 %
+;
+}
+#
+downloadsSummaryDescription
+.
+downloadTarget
+{
+margin
+-
+bottom
+:
+6px
+;
+cursor
+:
+inherit
 ;
 }
 .
@@ -570,17 +588,9 @@ calc
 9
 )
 ;
-margin
--
-bottom
-:
-6px
-;
-cursor
-:
-inherit
-;
 }
+#
+downloadsSummaryDetails
 .
 downloadDetails
 {
