Bug 831432 - Downloads button has no text in Text button mode. r=mconley
UltraBlame original commit: b4be6e1db78424771b9f472e6dc8e11df6133b86

--- a/browser/themes/pinstripe/downloads/downloads.css
+++ b/browser/themes/pinstripe/downloads/downloads.css
@@ -4763,3 +4763,45 @@ gradient
 )
 ;
 }
+toolbar
+[
+mode
+=
+"
+full
+"
+]
+>
+#
+downloads
+-
+indicator
+>
+.
+toolbarbutton
+-
+text
+{
+margin
+:
+2px
+0
+0
+;
+padding
+:
+0
+;
+text
+-
+align
+:
+center
+;
+vertical
+-
+align
+:
+middle
+;
+}
