--- a/browser/components/downloads/content/downloads.css
+++ b/browser/components/downloads/content/downloads.css
@@ -602,3 +602,116 @@ display
 none
 ;
 }
+toolbar
+[
+mode
+=
+"
+text
+"
+]
+>
+#
+downloads
+-
+indicator
+{
+display
+:
+-
+moz
+-
+box
+;
+-
+moz
+-
+box
+-
+orient
+:
+vertical
+;
+-
+moz
+-
+box
+-
+pack
+:
+center
+;
+}
+toolbar
+[
+mode
+=
+"
+text
+"
+]
+>
+#
+downloads
+-
+indicator
+>
+.
+toolbarbutton
+-
+text
+{
+-
+moz
+-
+box
+-
+ordinal
+-
+group
+:
+1
+;
+}
+toolbar
+[
+mode
+=
+"
+text
+"
+]
+>
+#
+downloads
+-
+indicator
+>
+.
+toolbarbutton
+-
+icon
+{
+display
+:
+-
+moz
+-
+box
+;
+-
+moz
+-
+box
+-
+ordinal
+-
+group
+:
+2
+;
+visibility
+:
+collapse
+;
+}
