--- a/browser/themes/gnomestripe/downloads/downloads.css
+++ b/browser/themes/gnomestripe/downloads/downloads.css
@@ -2515,3 +2515,33 @@ gradient
 )
 ;
 }
+toolbar
+[
+mode
+=
+"
+full
+"
+]
+>
+#
+downloads
+-
+indicator
+>
+.
+toolbarbutton
+-
+text
+{
+margin
+:
+0
+;
+text
+-
+align
+:
+center
+;
+}
