Bug 836451 - Add distribution info to about:firefox, r=margaret
UltraBlame original commit: a74d4bc64a70ef54b154ac47954c2265ce8f1f5a

--- a/mobile/android/themes/core/aboutPage.css
+++ b/mobile/android/themes/core/aboutPage.css
@@ -368,7 +368,7 @@ none
 ;
 }
 #
-aboutTelemetry
+messages
 {
 position
 :
@@ -405,7 +405,7 @@ center
 ;
 }
 #
-aboutTelemetry
+telemetry
 a
 {
 text
