--- a/browser/themes/pinstripe/browser.css
+++ b/browser/themes/pinstripe/browser.css
@@ -15591,6 +15591,56 @@ width
 }
 }
 #
+historySwipeAnimationCurrentPage
+#
+historySwipeAnimationNextPage
+{
+box
+-
+shadow
+:
+0
+3px
+6px
+rgba
+(
+0
+0
+0
+0
+.
+6
+)
+;
+}
+#
+historySwipeAnimationContainer
+{
+background
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+linen
+-
+pattern
+.
+png
+"
+)
+#
+B3B9C1
+;
+}
+#
 sidebar
 sidebarheader
 {
