Swipe availability check - Bug 678392 - [10.7] Add support for swipe animation as in Safari. r=smichaud
UltraBlame original commit: 1f8810ef3a5a9b4d83786e61b918cdabf7ab5df7

--- a/layout/style/test/test_media_queries.html
+++ b/layout/style/test/test_media_queries.html
@@ -6167,6 +6167,20 @@ expression_should_be_parseable
 -
 moz
 -
+swipe
+-
+animation
+-
+enabled
+"
+)
+;
+expression_should_be_parseable
+(
+"
+-
+moz
+-
 scrollbar
 -
 start
@@ -6397,6 +6411,22 @@ expression_should_be_parseable
 -
 moz
 -
+swipe
+-
+animation
+-
+enabled
+:
+0
+"
+)
+;
+expression_should_be_parseable
+(
+"
+-
+moz
+-
 scrollbar
 -
 start
@@ -6621,6 +6651,22 @@ classic
 "
 )
 ;
+expression_should_be_parseable
+(
+"
+-
+moz
+-
+swipe
+-
+animation
+-
+enabled
+:
+1
+"
+)
+;
 expression_should_not_be_parseable
 (
 "
@@ -6872,6 +6918,23 @@ expression_should_not_be_parseable
 -
 moz
 -
+swipe
+-
+animation
+-
+enabled
+:
+-
+1
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
 scrollbar
 -
 start
@@ -7091,6 +7154,22 @@ moz
 maemo
 -
 classic
+:
+true
+"
+)
+;
+expression_should_not_be_parseable
+(
+"
+-
+moz
+-
+swipe
+-
+animation
+-
+enabled
 :
 true
 "
