--- a/browser/themes/pinstripe/devtools/orion.css
+++ b/browser/themes/pinstripe/devtools/orion.css
@@ -224,9 +224,11 @@ repeat
 ;
 }
 .
-annotationHTML
+annotation
 .
 task
+.
+annotationHTML
 {
 background
 -
@@ -255,9 +257,11 @@ png
 ;
 }
 .
-annotationHTML
+annotation
 .
 breakpoint
+.
+annotationHTML
 {
 background
 -
@@ -286,9 +290,11 @@ png
 ;
 }
 .
-annotationHTML
+annotation
 .
 debugLocation
+.
+annotationHTML
 {
 background
 -
@@ -312,6 +318,165 @@ orion
 debug
 -
 location
+.
+png
+"
+)
+;
+}
+.
+annotation
+.
+breakpoint
+.
+debugLocation
+.
+annotationHTML
+.
+annotation
+.
+task
+.
+debugLocation
+.
+annotationHTML
+{
+background
+-
+position
+:
+center
+center
+;
+background
+-
+repeat
+:
+no
+-
+repeat
+no
+-
+repeat
+;
+background
+-
+size
+:
+75
+%
+100
+%
+;
+}
+.
+annotation
+.
+breakpoint
+.
+debugLocation
+.
+annotationHTML
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+orion
+-
+debug
+-
+location
+.
+png
+"
+)
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+orion
+-
+breakpoint
+.
+png
+"
+)
+;
+}
+.
+annotation
+.
+task
+.
+debugLocation
+.
+annotationHTML
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+orion
+-
+debug
+-
+location
+.
+png
+"
+)
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+orion
+-
+task
 .
 png
 "
