Bug 838175 - Downloads indicator wasn't turning green on completed downloads in tabs-on-bottom mode. r=mak.
UltraBlame original commit: 8c687b309a7a6877a5e43ce4caab9c18f097e623

--- a/browser/themes/winstripe/downloads/downloads-aero.css
+++ b/browser/themes/winstripe/downloads/downloads-aero.css
@@ -180,6 +180,25 @@ menubar
 downloads
 -
 indicator
+:
+not
+(
+[
+attention
+]
+)
+>
+#
+downloads
+-
+indicator
+-
+anchor
+>
+#
+downloads
+-
+indicator
 -
 icon
 :
@@ -198,6 +217,25 @@ tabsontop
 =
 true
 ]
+#
+downloads
+-
+indicator
+:
+not
+(
+[
+attention
+]
+)
+>
+#
+downloads
+-
+indicator
+-
+anchor
+>
 #
 downloads
 -
@@ -227,6 +265,25 @@ false
 nav
 -
 bar
+#
+downloads
+-
+indicator
+:
+not
+(
+[
+attention
+]
+)
+>
+#
+downloads
+-
+indicator
+-
+anchor
+>
 #
 downloads
 -
@@ -269,6 +326,25 @@ false
 last
 -
 child
+#
+downloads
+-
+indicator
+:
+not
+(
+[
+attention
+]
+)
+>
+#
+downloads
+-
+indicator
+-
+anchor
+>
 #
 downloads
 -
