Bug 840346: Flat UI in about: pages. [r=mfinkle]
UltraBlame original commit: 6f28814befb7292390df8ccfaa8786c36a2bf9a9

--- a/mobile/android/themes/core/aboutApps.css
+++ b/mobile/android/themes/core/aboutApps.css
@@ -24,30 +24,10 @@ size
 ;
 background
 -
-image
+color
 :
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-about
--
-bg
--
-lightblue
-.
-png
-"
-)
+#
+ced7de
 ;
 -
 moz
