--- a/mobile/android/themes/core/aboutPrivateBrowsing.css
+++ b/mobile/android/themes/core/aboutPrivateBrowsing.css
@@ -71,30 +71,10 @@ color
 ;
 background
 -
-image
+color
 :
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-privatebrowsing
--
-bg
--
-textured
-.
-png
-"
-)
+#
+292c29
 ;
 }
 body
@@ -108,30 +88,10 @@ color
 ;
 background
 -
-image
+color
 :
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-about
--
-bg
--
-lightblue
-.
-png
-"
-)
+#
+ced7de
 ;
 }
 h1
