--- a/mobile/android/themes/core/aboutReader.css
+++ b/mobile/android/themes/core/aboutReader.css
@@ -1589,9 +1589,10 @@ none
 ;
 background
 -
-repeat
+color
 :
-repeat
+#
+ced7de
 ;
 }
 .
@@ -3155,47 +3156,6 @@ height
 48px
 ;
 }
-.
-toolbar
-{
-background
--
-size
-:
-48px
-;
-background
--
-image
-:
-url
-(
-'
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-reader
--
-toolbar
--
-bg
--
-port
--
-mdpi
-.
-png
-'
-)
-;
-}
 }
 media
 screen
@@ -3212,47 +3172,6 @@ button
 height
 :
 40px
-;
-}
-.
-toolbar
-{
-background
--
-size
-:
-40px
-;
-background
--
-image
-:
-url
-(
-'
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-reader
--
-toolbar
--
-bg
--
-land
--
-mdpi
-.
-png
-'
-)
 ;
 }
 }
@@ -3277,47 +3196,6 @@ width
 height
 :
 56px
-;
-}
-.
-toolbar
-{
-background
--
-size
-:
-56px
-;
-background
--
-image
-:
-url
-(
-'
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-reader
--
-toolbar
--
-bg
--
-xlarge
--
-mdpi
-.
-png
-'
-)
 ;
 }
 .
@@ -3328,328 +3206,6 @@ toolbar
 width
 :
 56px
-;
-}
-}
-media
-screen
-and
-(
-orientation
-:
-portrait
-)
-and
-(
-min
--
-resolution
-:
-200dpi
-)
-{
-.
-toolbar
-{
-background
--
-image
-:
-url
-(
-'
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-reader
--
-toolbar
--
-bg
--
-port
--
-hdpi
-.
-png
-'
-)
-;
-}
-}
-media
-screen
-and
-(
-orientation
-:
-landscape
-)
-and
-(
-min
--
-resolution
-:
-200dpi
-)
-{
-.
-toolbar
-{
-background
--
-image
-:
-url
-(
-'
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-reader
--
-toolbar
--
-bg
--
-land
--
-hdpi
-.
-png
-'
-)
-;
-}
-}
-media
-screen
-and
-(
-orientation
-:
-portrait
-)
-and
-(
-min
--
-resolution
-:
-300dpi
-)
-{
-.
-toolbar
-{
-background
--
-image
-:
-url
-(
-'
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-reader
--
-toolbar
--
-bg
--
-port
--
-xhdpi
-.
-png
-'
-)
-;
-}
-}
-media
-screen
-and
-(
-orientation
-:
-landscape
-)
-and
-(
-min
--
-resolution
-:
-300dpi
-)
-{
-.
-toolbar
-{
-background
--
-image
-:
-url
-(
-'
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-reader
--
-toolbar
--
-bg
--
-land
--
-xhdpi
-.
-png
-'
-)
-;
-}
-}
-media
-screen
-and
-(
-min
--
-width
-:
-960px
-)
-and
-(
-min
--
-resolution
-:
-200dpi
-)
-{
-.
-toolbar
-{
-background
--
-image
-:
-url
-(
-'
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-reader
--
-toolbar
--
-bg
--
-xlarge
--
-hdpi
-.
-png
-'
-)
-;
-}
-}
-media
-screen
-and
-(
-min
--
-width
-:
-960px
-)
-and
-(
-min
--
-resolution
-:
-300dpi
-)
-{
-.
-toolbar
-{
-background
--
-image
-:
-url
-(
-'
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-reader
--
-toolbar
--
-bg
--
-xlarge
--
-xhdpi
-.
-png
-'
-)
 ;
 }
 }
