--- a/mobile/android/themes/core/aboutAddons.css
+++ b/mobile/android/themes/core/aboutAddons.css
@@ -24,30 +24,10 @@ size
 ;
 background
 -
-image
+color
 :
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-about
--
-bg
--
-lightblue
-.
-png
-"
-)
+#
+ced7de
 ;
 -
 moz
@@ -187,30 +167,10 @@ black
 ;
 background
 -
-image
+color
 :
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-row
--
-bg
--
-normal
-.
-png
-"
-)
+#
+e6e9eb
 ;
 border
 -
@@ -261,30 +221,10 @@ inner
 {
 background
 -
-image
+color
 :
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-row
--
-bg
--
-light
-.
-png
-"
-)
+#
+eef2f5
 ;
 min
 -
@@ -427,30 +367,10 @@ status
 {
 background
 -
-image
+color
 :
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-row
--
-bg
--
-light
-.
-png
-"
-)
+#
+eef2f5
 ;
 border
 -
