--- a/mobile/android/themes/core/aboutDownloads.css
+++ b/mobile/android/themes/core/aboutDownloads.css
@@ -32,30 +32,10 @@ size
 ;
 background
 -
-image
+color
 :
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-about
--
-bg
--
-lightblue
-.
-png
-"
-)
+#
+ced7de
 ;
 -
 moz
@@ -200,30 +180,10 @@ black
 ;
 background
 -
-image
+color
 :
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-row
--
-bg
--
-normal
-.
-png
-"
-)
+#
+e6e9eb
 ;
 border
 -
@@ -320,30 +280,10 @@ details
 {
 background
 -
-image
+color
 :
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-row
--
-bg
--
-light
-.
-png
-"
-)
+#
+eef2f5
 ;
 }
 #
