--- a/mobile/android/themes/core/aboutFeedback.css
+++ b/mobile/android/themes/core/aboutFeedback.css
@@ -40,30 +40,10 @@ color
 ;
 background
 -
-image
+color
 :
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-about
--
-bg
--
-lightblue
-.
-png
-"
-)
+#
+ced7de
 ;
 padding
 :
