--- a/mobile/android/themes/core/aboutPage.css
+++ b/mobile/android/themes/core/aboutPage.css
@@ -40,30 +40,10 @@ color
 ;
 background
 -
-image
+color
 :
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-about
--
-bg
--
-lightblue
-.
-png
-"
-)
+#
+ced7de
 ;
 }
 #
@@ -153,30 +133,10 @@ height
 ;
 background
 -
-image
+color
 :
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-about
--
-bg
--
-darkblue
-.
-png
-"
-)
+#
+bdc7ce
 ;
 }
 #
