Bug 648675 - Allow comments and URL opt-in in content/plugin crash UI. r=dolske,ted
UltraBlame original commit: 528411b6f62860ccb9cbb996033a4d84965771ed

--- a/toolkit/mozapps/plugins/content/pluginProblemContent.css
+++ b/toolkit/mozapps/plugins/content/pluginProblemContent.css
@@ -634,6 +634,42 @@ block
 submitStatus
 [
 status
+]
+{
+display
+:
+-
+moz
+-
+box
+;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+-
+moz
+-
+box
+-
+pack
+:
+center
+;
+height
+:
+160px
+;
+}
+.
+submitStatus
+[
+status
 =
 "
 noReport
@@ -696,56 +732,9 @@ failed
 ]
 .
 msgSubmitFailed
-.
-submitStatus
-[
-status
-]
-:
-not
-(
-[
-status
-=
-"
-please
-"
-]
-)
-.
-msgReload
 {
 display
 :
 block
-;
-}
-.
-submitStatus
-[
-status
-=
-"
-please
-"
-]
-.
-msgReload
-{
-display
-:
-block
-;
-visibility
-:
-hidden
-;
-}
-.
-helpIcon
-{
-cursor
-:
-pointer
 ;
 }
