Bug 841407 - Replace usage of enablePrivilege in inspector tests. r=bholley
UltraBlame original commit: 87081ae8b6d6c8c2955b26bcf940820776ce9437

--- a/layout/inspector/tests/test_bug536379.html
+++ b/layout/inspector/tests/test_bug536379.html
@@ -217,32 +217,19 @@ Bug
 *
 *
 /
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-"
-UniversalXPConnect
-"
-)
-;
 const
 CI
 =
-Components
+SpecialPowers
 .
-interfaces
+Ci
 ;
 const
 CC
 =
-Components
+SpecialPowers
 .
-classes
+Cc
 ;
 var
 domUtils
@@ -359,9 +346,14 @@ length
 ;
 is
 (
+SpecialPowers
+.
+unwrap
+(
 firstPRule
 .
 parentStyleSheet
+)
 links
 [
 1
@@ -403,9 +395,14 @@ nsIDOMCSSStyleRule
 ;
 is
 (
+SpecialPowers
+.
+unwrap
+(
 secondPRule
 .
 parentStyleSheet
+)
 links
 [
 2
