--- a/layout/inspector/tests/test_bug557726.html
+++ b/layout/inspector/tests/test_bug557726.html
@@ -237,19 +237,6 @@ Bug
 *
 *
 /
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-"
-UniversalXPConnect
-"
-)
-;
 function
 getSelectors
 (
@@ -308,20 +295,25 @@ i
 .
 QueryInterface
 (
-Components
+SpecialPowers
 .
-interfaces
+Ci
 .
 nsIDOMCSSStyleRule
 )
 ;
 if
 (
+SpecialPowers
+.
+unwrap
+(
 rule
 .
 parentStyleSheet
 .
 ownerNode
+)
 =
 =
 styleElement
@@ -349,9 +341,9 @@ selectors
 var
 domUtils
 =
-Components
+SpecialPowers
 .
-classes
+Cc
 [
 "
 mozilla
@@ -370,9 +362,9 @@ utils
 .
 getService
 (
-Components
+SpecialPowers
 .
-interfaces
+Ci
 .
 inIDOMUtils
 )
