--- a/layout/inspector/tests/test_bug806192.html
+++ b/layout/inspector/tests/test_bug806192.html
@@ -99,25 +99,12 @@ application
 javascript
 "
 >
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-"
-UniversalXPConnect
-"
-)
-;
 const
 utils
 =
-Components
+SpecialPowers
 .
-classes
+Cc
 [
 "
 mozilla
