--- a/layout/inspector/tests/test_isinheritableproperty.html
+++ b/layout/inspector/tests/test_isinheritableproperty.html
@@ -106,25 +106,12 @@ do_test
 (
 )
 {
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-"
-UniversalXPConnect
-"
-)
-;
 var
 utils
 =
-Components
+SpecialPowers
 .
-classes
+Cc
 [
 "
 mozilla
@@ -143,9 +130,9 @@ utils
 .
 getService
 (
-Components
+SpecialPowers
 .
-interfaces
+Ci
 .
 inIDOMUtils
 )
