--- a/layout/inspector/tests/test_bug462789.html
+++ b/layout/inspector/tests/test_bug462789.html
@@ -248,25 +248,12 @@ DOCUMENT_NODE_TYPE
 =
 9
 ;
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-"
-UniversalXPConnect
-"
-)
-;
 var
 utils
 =
-Components
+SpecialPowers
 .
-classes
+Cc
 [
 "
 mozilla
@@ -285,9 +272,9 @@ utils
 .
 getService
 (
-Components
+SpecialPowers
 .
-interfaces
+Ci
 .
 inIDOMUtils
 )
@@ -581,11 +568,16 @@ docElement
 ;
 is
 (
-res
-instanceof
-Components
+SpecialPowers
 .
-interfaces
+unwrap
+(
+res
+)
+instanceof
+SpecialPowers
+.
+Ci
 [
 "
 nsIArray
