--- a/browser/themes/gnomestripe/browser.css
+++ b/browser/themes/gnomestripe/browser.css
@@ -9960,6 +9960,52 @@ icon
 popupid
 =
 "
+mixed
+-
+content
+-
+blocked
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+mixed
+-
+content
+-
+blocked
+-
+64
+.
+png
+)
+;
+}
+.
+popup
+-
+notification
+-
+icon
+[
+popupid
+=
+"
 webRTC
 -
 sharingDevices
