--- a/layout/style/test/test_keyframes_rules.html
+++ b/layout/style/test/test_keyframes_rules.html
@@ -1290,7 +1290,7 @@ parsed
 ;
 bounce
 .
-insertRule
+appendRule
 (
 "
 from
@@ -1311,7 +1311,7 @@ cssRules
 length
 3
 "
-insertRule
+appendRule
 should
 append
 "
@@ -1332,7 +1332,7 @@ keyText
 %
 "
 "
-insertRule
+appendRule
 should
 append
 "
@@ -1340,7 +1340,7 @@ append
 ;
 bounce
 .
-insertRule
+appendRule
 (
 "
 from
@@ -1361,7 +1361,7 @@ cssRules
 length
 4
 "
-insertRule
+appendRule
 should
 append
 "
@@ -1382,7 +1382,7 @@ keyText
 %
 "
 "
-insertRule
+appendRule
 should
 append
 "
@@ -1390,7 +1390,7 @@ append
 ;
 bounce
 .
-insertRule
+appendRule
 (
 "
 from
@@ -1417,7 +1417,7 @@ cssRules
 length
 4
 "
-insertRule
+appendRule
 should
 ignore
 garbage
