--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -1687,6 +1687,28 @@ cursor
 inherit
 ;
 }
+input
+:
+disabled
+>
+.
+anonymous
+-
+div
+textarea
+:
+disabled
+>
+.
+anonymous
+-
+div
+{
+cursor
+:
+default
+;
+}
 option
 :
 disabled
