Bug 836323 - Mochitest additions and changes for <input type=range>. r=mounir.
UltraBlame original commit: fb7e4cc681084ad81d3396a2a588c19f63a4c635

--- a/toolkit/components/satchel/test/test_form_autocomplete.html
+++ b/toolkit/components/satchel/test/test_form_autocomplete.html
@@ -849,6 +849,56 @@ button
 form
 >
 <
+form
+id
+=
+"
+form16
+"
+onsubmit
+=
+"
+return
+false
+;
+"
+>
+<
+input
+type
+=
+"
+range
+"
+name
+=
+"
+field13
+"
+max
+=
+"
+64
+"
+>
+<
+button
+type
+=
+"
+submit
+"
+>
+Submit
+<
+/
+button
+>
+<
+/
+form
+>
+<
 /
 div
 >
@@ -1328,6 +1378,34 @@ fh
 addEntry
 (
 "
+field13
+"
+"
+32
+"
+)
+;
+/
+/
+not
+used
+since
+type
+=
+range
+doesn
+'
+t
+have
+a
+drop
+down
+menu
+fh
+.
+addEntry
+(
+"
 searchbar
 -
 history
@@ -1371,9 +1449,6 @@ week
 datetime
 -
 local
-"
-"
-range
 "
 "
 color
@@ -4905,6 +4980,87 @@ checkForm
 "
 )
 ;
+input
+=
+_
+(
+16
+"
+field13
+"
+)
+;
+restoreForm
+(
+)
+;
+doKey
+(
+"
+down
+"
+)
+;
+break
+;
+case
+407
+:
+checkMenuEntries
+(
+[
+]
+)
+;
+/
+/
+type
+=
+range
+does
+not
+have
+a
+drop
+down
+menu
+doKey
+(
+"
+down
+"
+)
+;
+doKey
+(
+"
+return
+"
+)
+;
+checkForm
+(
+"
+32
+"
+)
+;
+/
+/
+default
+(
+midway
+between
+minimum
+(
+0
+)
+and
+maximum
+(
+64
+)
+)
 /
 /
 Go
