Bug 841873 test changes: Tweak reftests/mochitests/crashtests to remove assumptions about the flexbox pref's default setting. (test-only)
UltraBlame original commit: 1fae6592d663d4563c0f83f910d8b4d63e9e0440

--- a/layout/style/test/test_flexbox_align_self_auto.html
+++ b/layout/style/test/test_flexbox_align_self_auto.html
@@ -267,11 +267,9 @@ waitForExplicitFinish
 (
 )
 ;
-ok
-(
 SpecialPowers
 .
-getBoolPref
+setBoolPref
 (
 "
 layout
@@ -282,17 +280,7 @@ flexbox
 .
 enabled
 "
-)
-"
-expecting
-flexbox
-pref
-to
-be
-enabled
-by
-default
-"
+true
 )
 ;
 document
