--- a/layout/style/test/test_flexbox_child_display_values.html
+++ b/layout/style/test/test_flexbox_child_display_values.html
@@ -269,11 +269,9 @@ waitForExplicitFinish
 (
 )
 ;
-ok
-(
 SpecialPowers
 .
-getBoolPref
+setBoolPref
 (
 "
 layout
@@ -284,17 +282,7 @@ flexbox
 .
 enabled
 "
-)
-"
-expecting
-flexbox
-pref
-to
-be
-enabled
-by
-default
-"
+true
 )
 ;
 document
