--- a/layout/style/test/test_flexbox_layout.html
+++ b/layout/style/test/test_flexbox_layout.html
@@ -247,11 +247,9 @@ waitForExplicitFinish
 (
 )
 ;
-ok
-(
 SpecialPowers
 .
-getBoolPref
+setBoolPref
 (
 "
 layout
@@ -262,17 +260,7 @@ flexbox
 .
 enabled
 "
-)
-"
-expecting
-flexbox
-pref
-to
-be
-enabled
-by
-default
-"
+true
 )
 ;
 document
