--- a/layout/style/test/test_flexbox_min_size_auto.html
+++ b/layout/style/test/test_flexbox_min_size_auto.html
@@ -281,11 +281,9 @@ waitForExplicitFinish
 (
 )
 ;
-ok
-(
 SpecialPowers
 .
-getBoolPref
+setBoolPref
 (
 "
 layout
@@ -296,17 +294,7 @@ flexbox
 .
 enabled
 "
-)
-"
-expecting
-flexbox
-pref
-to
-be
-enabled
-by
-default
-"
+true
 )
 ;
 document
