--- a/layout/style/test/test_flexbox_flex_grow_and_shrink.html
+++ b/layout/style/test/test_flexbox_flex_grow_and_shrink.html
@@ -267,11 +267,9 @@ waitForExplicitFinish
 (
 )
 ;
-ok
-(
 SpecialPowers
 .
-getBoolPref
+setBoolPref
 (
 "
 layout
@@ -282,17 +280,7 @@ flexbox
 .
 enabled
 "
-)
-"
-expecting
-flexbox
-pref
-to
-be
-enabled
-by
-default
-"
+true
 )
 ;
 document
