--- a/layout/style/test/test_flexbox_order.html
+++ b/layout/style/test/test_flexbox_order.html
@@ -264,11 +264,9 @@ waitForExplicitFinish
 (
 )
 ;
-ok
-(
 SpecialPowers
 .
-getBoolPref
+setBoolPref
 (
 "
 layout
@@ -279,17 +277,7 @@ flexbox
 .
 enabled
 "
-)
-"
-expecting
-flexbox
-pref
-to
-be
-enabled
-by
-default
-"
+true
 )
 ;
 document
