--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -3565,6 +3565,176 @@ d44
 )
 ;
 }
+input
+[
+type
+=
+"
+range
+"
+]
+{
+cursor
+:
+move
+;
+-
+moz
+-
+appearance
+:
+scale
+-
+horizontal
+;
+display
+:
+inline
+-
+block
+;
+border
+:
+2px
+solid
+;
+-
+moz
+-
+border
+-
+top
+-
+colors
+:
+ThreeDShadow
+#
+e6e6e6
+;
+-
+moz
+-
+border
+-
+right
+-
+colors
+:
+ThreeDHighlight
+#
+e6e6e6
+;
+-
+moz
+-
+border
+-
+bottom
+-
+colors
+:
+ThreeDHighlight
+#
+e6e6e6
+;
+-
+moz
+-
+border
+-
+left
+-
+colors
+:
+ThreeDShadow
+#
+e6e6e6
+;
+background
+-
+color
+:
+#
+e6e6e6
+;
+}
+:
+:
+-
+moz
+-
+range
+-
+thumb
+{
+display
+:
+inline
+-
+block
+!
+important
+;
+float
+:
+none
+!
+important
+;
+position
+:
+static
+!
+important
+;
+overflow
+:
+visible
+!
+important
+;
+-
+moz
+-
+box
+-
+sizing
+:
+border
+-
+box
+!
+important
+;
+-
+moz
+-
+appearance
+:
+scale
+-
+thumb
+-
+horizontal
+;
+height
+:
+100
+%
+;
+width
+:
+100
+%
+;
+background
+-
+color
+:
+#
+0064b4
+;
+}
 %
 ifdef
 XP_OS2
