--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -3574,88 +3574,120 @@ range
 "
 ]
 {
-cursor
-:
-move
-;
 -
 moz
 -
 appearance
 :
-scale
--
-horizontal
+none
 ;
 display
 :
 inline
 -
 block
+!
+important
+;
+cursor
+:
+default
+;
+width
+:
+12em
+;
+height
+:
+1
+.
+3em
+;
+background
+:
+none
 ;
 border
 :
-2px
-solid
+none
 ;
+margin
+:
+0
+0
+.
+7em
+;
+}
+:
+:
 -
 moz
 -
+range
+-
+track
+{
+display
+:
+inline
+-
+block
+!
+important
+;
+float
+:
+none
+!
+important
+;
+position
+:
+static
+!
+important
+;
+border
+:
+none
+;
 border
 -
 top
--
-colors
 :
-ThreeDShadow
-#
-e6e6e6
+solid
+0
+.
+1em
+lightgrey
 ;
--
-moz
--
-border
--
-right
--
-colors
-:
-ThreeDHighlight
-#
-e6e6e6
-;
--
-moz
--
 border
 -
 bottom
--
-colors
 :
-ThreeDHighlight
-#
-e6e6e6
-;
--
-moz
--
-border
--
-left
--
-colors
-:
-ThreeDShadow
-#
-e6e6e6
+solid
+0
+.
+1em
+lightgrey
 ;
 background
 -
 color
 :
-#
-e6e6e6
+grey
+;
+width
+:
+100
+%
+;
+height
+:
+0
+.
+2em
 ;
 }
 :
@@ -3687,52 +3719,149 @@ static
 !
 important
 ;
-overflow
+width
 :
-visible
-!
-important
-;
--
-moz
--
-box
--
-sizing
-:
-border
--
-box
-!
-important
-;
--
-moz
--
-appearance
-:
-scale
--
-thumb
--
-horizontal
+1em
 ;
 height
 :
-100
-%
+1em
 ;
-width
+border
 :
-100
-%
+0
+.
+1em
+solid
+grey
+;
+border
+-
+radius
+:
+0
+.
+5em
 ;
 background
 -
-color
+image
 :
-#
-0064b4
+url
+(
+"
+data
+:
+image
+/
+svg
++
+xml
+;
+utf8
+<
+svg
+xmlns
+=
+'
+http
+:
+/
+/
+www
+.
+w3
+.
+org
+/
+2000
+/
+svg
+'
+>
+<
+linearGradient
+id
+=
+'
+g
+'
+x2
+=
+'
+0
+'
+y2
+=
+'
+100
+%
+'
+>
+<
+stop
+stop
+-
+color
+=
+'
+%
+23ddd
+'
+/
+>
+<
+stop
+offset
+=
+'
+100
+%
+'
+stop
+-
+color
+=
+'
+white
+'
+/
+>
+<
+/
+linearGradient
+>
+<
+rect
+fill
+=
+'
+url
+(
+%
+23g
+)
+'
+width
+=
+'
+100
+%
+'
+height
+=
+'
+100
+%
+'
+/
+>
+<
+/
+svg
+>
+"
+)
 ;
 }
 %
