Bug 838256 - Fix <input type=range> dynamic reftests to use the MozReftestInvalidate event instead of the load event. r=me.
UltraBlame original commit: 87d5ffb1da7250f611f2aed3c66cb0d0d3a3bece

--- a/layout/reftests/forms/input/range/input-from-range-to-other-type-unthemed-1.html
+++ b/layout/reftests/forms/input/range/input-from-range-to-other-type-unthemed-1.html
@@ -43,12 +43,6 @@ type
 checkbox
 '
 ;
-}
-function
-disableReftestWait
-(
-)
-{
 document
 .
 documentElement
@@ -59,24 +53,22 @@ className
 '
 ;
 }
+document
+.
+addEventListener
+(
+"
+MozReftestInvalidate
+"
+setToCheckbox
+)
+;
 <
 /
 script
 >
 <
 body
-onload
-=
-"
-setToCheckbox
-(
-)
-;
-disableReftestWait
-(
-)
-;
-"
 >
 <
 input
