--- a/layout/reftests/forms/input/range/input-to-range-from-other-type-unthemed-1.html
+++ b/layout/reftests/forms/input/range/input-to-range-from-other-type-unthemed-1.html
@@ -43,12 +43,6 @@ type
 range
 '
 ;
-}
-function
-disableReftestWait
-(
-)
-{
 document
 .
 documentElement
@@ -59,24 +53,22 @@ className
 '
 ;
 }
+document
+.
+addEventListener
+(
+"
+MozReftestInvalidate
+"
+setToRange
+)
+;
 <
 /
 script
 >
 <
 body
-onload
-=
-"
-setToRange
-(
-)
-;
-disableReftestWait
-(
-)
-;
-"
 >
 <
 input
