Bug 840270 - Don't show a popup for select[multiple] with precise pointer input [r=jimm]
UltraBlame original commit: fa528f1db0d513faa36e54db480194325707fc05

--- a/browser/metro/theme/content.css
+++ b/browser/metro/theme/content.css
@@ -737,9 +737,44 @@ color
 ;
 }
 select
+[
+size
+=
+1
+]
+:
+-
+moz
+-
+any
+(
 option
-select
 optgroup
+)
+select
+:
+not
+(
+[
+size
+]
+)
+:
+not
+(
+[
+multiple
+]
+)
+:
+-
+moz
+-
+any
+(
+option
+optgroup
+)
 {
 pointer
 -
