--- a/addon-sdk/source/doc/static-files/css/sdk-docs.css
+++ b/addon-sdk/source/doc/static-files/css/sdk-docs.css
@@ -1903,15 +1903,21 @@ repeat
 ;
 }
 ul
-.
-module
--
-list
-ul
 #
 module
 -
 index
+h2
+[
+id
+=
+"
+Module
+Compatibility
+"
+]
+~
+ul
 {
 border
 -
@@ -1995,35 +2001,32 @@ unsupported
 on
 -
 mobile
+strong
+h2
+[
+id
+=
+"
+Module
+Compatibility
+"
+]
+~
 ul
-.
-module
--
-list
-li
-.
-unsupported
--
-on
--
-mobile
-ul
-.
-module
--
-list
-li
-.
-unsupported
--
-on
--
-mobile
->
-a
+strong
 {
-color
+font
+-
+weight
 :
-maroon
+normal
+;
+text
+-
+decoration
+:
+line
+-
+through
 ;
 }
