Bug 842829 - Fix test_condition_text.html to parse the style sheet after the pref is set. r=dbaron
UltraBlame original commit: b97e7f2242111a81e6a435b967d6ab4860fb4948

--- a/layout/style/test/test_condition_text.html
+++ b/layout/style/test/test_condition_text.html
@@ -506,8 +506,21 @@ runTest
 (
 )
 {
-var
+/
+/
+re
+-
+parse
+the
+style
 sheet
+with
+the
+pref
+turned
+on
+var
+style
 =
 document
 .
@@ -517,6 +530,19 @@ getElementById
 style
 "
 )
+;
+style
+.
+textContent
++
+=
+"
+"
+;
+var
+sheet
+=
+style
 .
 sheet
 ;
