Bug 842772 - Don't test for mask-type when the pref is disabled. r=dbaron
UltraBlame original commit: f5f3b3a8dc0cf28b6796b18a2b86adf7d1839b66

--- a/layout/style/test/test_property_database.html
+++ b/layout/style/test/test_property_database.html
@@ -299,6 +299,27 @@ gLonghandProperties
 idx
 ]
 ;
+if
+(
+prop
+.
+pref
+&
+&
+!
+SpecialPowers
+.
+getBoolPref
+(
+prop
+.
+pref
+)
+)
+{
+continue
+;
+}
 var
 present
 =
@@ -409,6 +430,27 @@ gShorthandProperties
 idx
 ]
 ;
+if
+(
+prop
+.
+pref
+&
+&
+!
+SpecialPowers
+.
+getBoolPref
+(
+prop
+.
+pref
+)
+)
+{
+continue
+;
+}
 var
 present
 =
@@ -538,6 +580,27 @@ gShorthandPropertiesLikeLonghand
 idx
 ]
 ;
+if
+(
+prop
+.
+pref
+&
+&
+!
+SpecialPowers
+.
+getBoolPref
+(
+prop
+.
+pref
+)
+)
+{
+continue
+;
+}
 var
 present
 =
@@ -674,6 +737,27 @@ gCSSProperties
 prop
 ]
 ;
+if
+(
+info
+.
+pref
+&
+&
+!
+SpecialPowers
+.
+getBoolPref
+(
+info
+.
+pref
+)
+)
+{
+continue
+;
+}
 if
 (
 info
