--- a/addon-sdk/source/doc/static-files/css/sdk-docs.css
+++ b/addon-sdk/source/doc/static-files/css/sdk-docs.css
@@ -1903,21 +1903,15 @@ repeat
 ;
 }
 ul
+.
+module
+-
+list
+ul
 #
 module
 -
 index
-h2
-[
-id
-=
-"
-Module
-Compatibility
-"
-]
-~
-ul
 {
 border
 -
@@ -2001,32 +1995,35 @@ unsupported
 on
 -
 mobile
-strong
-h2
-[
-id
-=
-"
-Module
-Compatibility
-"
-]
-~
 ul
-strong
+.
+module
+-
+list
+li
+.
+unsupported
+-
+on
+-
+mobile
+ul
+.
+module
+-
+list
+li
+.
+unsupported
+-
+on
+-
+mobile
+>
+a
 {
-font
--
-weight
+color
 :
-normal
-;
-text
--
-decoration
-:
-line
--
-through
+maroon
 ;
 }
