Bug 842513 - Specify character sets for sample files and data URLs used in tests; r=felipe
UltraBlame original commit: e1e6f62d6bf12780da72629aa41f704a818f77a0

--- a/browser/components/sessionstore/test/browser_463205_sample.html
+++ b/browser/components/sessionstore/test/browser_463205_sample.html
@@ -4,6 +4,16 @@ DOCTYPE
 html
 >
 <
+meta
+charset
+=
+"
+utf
+-
+8
+"
+>
+<
 title
 >
 Test
@@ -34,6 +44,12 @@ data
 text
 /
 html
+;
+charset
+=
+utf
+-
+8
 <
 input
 %
@@ -73,6 +89,12 @@ data
 text
 /
 html
+;
+charset
+=
+utf
+-
+8
 mark1
 "
 >
@@ -115,6 +137,12 @@ data
 text
 /
 html
+;
+charset
+-
+utf
+-
+8
 mark1
 "
 )
@@ -134,6 +162,12 @@ data
 text
 /
 html
+;
+charset
+=
+utf
+-
+8
 mark2
 "
 ;
