--- a/browser/components/sessionstore/test/browser_463206_sample.html
+++ b/browser/components/sessionstore/test/browser_463206_sample.html
@@ -4,6 +4,16 @@ DOCTYPE
 html
 >
 <
+meta
+charset
+=
+"
+utf
+-
+8
+"
+>
+<
 title
 >
 Test
@@ -24,6 +34,12 @@ data
 text
 /
 html
+;
+charset
+=
+utf
+-
+8
 <
 iframe
 >
@@ -42,6 +58,12 @@ data
 text
 /
 html
+;
+charset
+=
+utf
+-
+8
 <
 input
 %
@@ -74,6 +96,12 @@ data
 text
 /
 html
+;
+charset
+=
+utf
+-
+8
 <
 input
 %
@@ -103,6 +131,12 @@ data
 text
 /
 html
+;
+charset
+=
+utf
+-
+8
 <
 input
 %
