--- a/browser/components/sessionstore/test/browser_464620_b.html
+++ b/browser/components/sessionstore/test/browser_464620_b.html
@@ -133,6 +133,12 @@ data
 text
 /
 html
+;
+charset
+=
+utf
+-
+8
 <
 body
 onload
@@ -165,6 +171,12 @@ data
 text
 /
 html
+;
+charset
+=
+utf
+-
+8
 <
 body
 onload
