--- a/browser/components/sessionstore/test/browser_739531_sample.html
+++ b/browser/components/sessionstore/test/browser_739531_sample.html
@@ -10,6 +10,16 @@ html
 head
 >
 <
+meta
+charset
+=
+"
+utf
+-
+8
+"
+>
+<
 script
 >
 function
@@ -97,6 +107,12 @@ data
 text
 /
 html
+;
+charset
+=
+utf
+-
+8
 1
 "
 id
