--- a/browser/themes/gnomestripe/browser.css
+++ b/browser/themes/gnomestripe/browser.css
@@ -15498,42 +15498,20 @@ highlighter
 inc
 .
 css
-html
-|
-*
-#
-gcli
--
-tooltip
--
-frame
-html
-|
-*
-#
-gcli
--
-output
--
-frame
-{
-padding
-:
-0
-;
-border
--
-width
-:
-0
-;
-background
--
-color
-:
-transparent
-;
-}
+%
+include
+.
+.
+/
+shared
+/
+devtools
+/
+commandline
+.
+inc
+.
+css
 .
 gcli
 -
@@ -15544,118 +15522,6 @@ padding
 0
 ;
 }
-#
-gcli
--
-output
-#
-gcli
--
-tooltip
-{
-border
--
-width
-:
-0
-;
-background
--
-color
-:
-transparent
-;
--
-moz
--
-appearance
-:
-none
-;
-margin
--
-bottom
-:
--
-2px
-;
-}
-.
-gclitoolbar
--
-input
--
-node
-.
-gclitoolbar
--
-complete
--
-node
-.
-gclitoolbar
--
-prompt
-{
-margin
-:
-0
-;
--
-moz
--
-margin
--
-end
-:
-5px
-;
--
-moz
--
-box
--
-align
-:
-center
-;
-padding
--
-top
-:
-0
-;
-padding
--
-bottom
-:
-0
-;
-padding
--
-right
-:
-4px
-;
-border
-:
-1px
-solid
-transparent
-;
-border
--
-radius
-:
-3px
-;
-text
--
-shadow
-:
-none
-;
-}
 .
 gclitoolbar
 -
@@ -15663,25 +15529,6 @@ input
 -
 node
 {
-padding
--
-left
-:
-20px
-;
-background
--
-color
-:
-transparent
-;
--
-moz
--
-appearance
-:
-none
-;
 border
 -
 color
@@ -15693,36 +15540,6 @@ hsl
 %
 10
 %
-)
-;
-color
-:
-hsl
-(
-210
-30
-%
-85
-%
-)
-;
-text
--
-shadow
-:
-0
--
-1px
-0
-hsla
-(
-210
-8
-%
-5
-%
-.
-45
 )
 ;
 box
@@ -15801,104 +15618,6 @@ moz
 -
 selection
 {
-background
--
-color
-:
-hsl
-(
-210
-30
-%
-85
-%
-)
-;
-color
-:
-hsl
-(
-210
-11
-%
-16
-%
-)
-;
-text
--
-shadow
-:
-none
-;
-}
-.
-gclitoolbar
--
-complete
--
-node
-{
-padding
--
-left
-:
-21px
-;
-background
--
-color
-:
-transparent
-;
-color
-:
-transparent
-;
-}
-.
-gclitoolbar
--
-prompt
-{
-padding
--
-left
-:
-4px
-;
-padding
--
-bottom
-:
-2px
-;
-font
--
-size
-:
-150
-%
-;
-font
--
-weight
-:
-bold
-;
-color
-:
-hsl
-(
-210
-30
-%
-85
-%
-)
-;
-background
--
 color
 :
 hsl
@@ -15915,147 +15634,17 @@ hsl
 gclitoolbar
 -
 prompt
--
-label
-.
-gcli
--
-in
--
-incomplete
-.
-gcli
--
-in
--
-error
-.
-gcli
--
-in
--
-ontab
-.
-gcli
--
-in
--
-todo
-.
-gcli
--
-in
--
-closebrace
-.
-gcli
--
-in
--
-param
-.
-gcli
--
-in
--
-valid
 {
-margin
-:
-0
-;
-padding
-:
-0
-;
-}
-.
-gcli
+background
 -
-in
--
-incomplete
-{
-border
--
-bottom
-:
-2px
-dotted
-#
-999
-;
-}
-.
-gcli
--
-in
--
-error
-{
-border
--
-bottom
-:
-2px
-dotted
-#
-F00
-;
-}
-.
-gcli
--
-in
--
-ontab
-{
 color
 :
 hsl
 (
 210
-0
+11
 %
-35
-%
-)
-;
-}
-.
-gcli
--
-in
--
-todo
-{
-color
-:
-hsl
-(
-210
-50
-%
-35
-%
-)
-;
-}
-.
-gcli
--
-in
--
-closebrace
-{
-color
-:
-hsl
-(
-0
-0
-%
-80
+16
 %
 )
 ;
