--- a/browser/themes/gnomestripe/browser.css
+++ b/browser/themes/gnomestripe/browser.css
@@ -16420,202 +16420,20 @@ padding
 0
 ;
 }
+%
+include
 .
-chat
--
-status
--
-icon
-{
-max
--
-height
-:
-16px
-;
-max
--
-width
-:
-16px
-;
-padding
-:
-0
-;
-}
 .
-chat
--
-toolbarbutton
-{
--
-moz
--
-appearance
-:
-none
-;
-border
-:
-none
-;
-padding
-:
-0
-;
-margin
-:
-0
-;
-background
-:
-none
-;
-}
-.
-chat
--
-toolbarbutton
->
-.
-toolbarbutton
--
-text
-{
-display
-:
-none
-;
-}
-.
-chat
--
-close
--
-button
-{
-list
--
-style
--
-image
-:
-url
-(
-'
-chrome
-:
 /
-/
-browser
-/
-skin
+shared
 /
 social
 /
 chat
--
-close
 .
-png
-'
-)
-;
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-14px
-14px
-0
-)
-;
-}
+inc
 .
-chat
--
-close
--
-button
-:
-hover
-:
-active
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-14px
-14px
-28px
-0
-)
-;
-}
-.
-chat
--
-close
--
-button
-:
-hover
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-28px
-14px
-42px
-0
-)
-;
-}
-.
-chat
--
-title
-{
-font
--
-weight
-:
-bold
-;
-color
-:
-black
-;
-text
--
-shadow
-:
-none
-;
-cursor
-:
-inherit
-;
-}
+css
 .
 chat
 -
@@ -16646,74 +16464,6 @@ rgba
 )
 )
 ;
-height
-:
-20px
-;
-min
--
-height
-:
-20px
-;
-width
-:
-100
-%
-;
-margin
-:
-0
-;
-padding
-:
-2px
-;
--
-moz
--
-padding
--
-start
-:
-6px
-;
-border
-:
-none
-;
-border
--
-bottom
-:
-1px
-solid
-#
-ccc
-;
-cursor
-:
-pointer
-;
-}
-.
-chat
--
-titlebar
-[
-minimized
-=
-"
-true
-"
-]
-{
-border
--
-bottom
-:
-none
-;
 }
 .
 chat
@@ -16729,86 +16479,6 @@ color
 :
 #
 f0f0f0
-;
-}
-.
-chat
--
-titlebar
-[
-activity
-]
-{
-background
--
-image
-:
-radial
--
-gradient
-(
-ellipse
-closest
--
-side
-at
-center
-rgb
-(
-255
-255
-255
-)
-rgba
-(
-255
-255
-255
-0
-)
-)
-;
-background
--
-repeat
-:
-no
--
-repeat
-;
-background
--
-size
-:
-100
-%
-20px
-;
-background
--
-position
-:
-0
--
-10px
-;
-}
-.
-chat
--
-frame
-{
-padding
-:
-0
-;
-margin
-:
-0
-;
-overflow
-:
-hidden
 ;
 }
 .
@@ -16830,72 +16500,6 @@ color
 #
 d9d9d9
 ;
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-social
-/
-social
-.
-png
-"
-)
-;
-border
-:
-none
-;
-margin
-:
-0
-;
-padding
-:
-2px
-;
-height
-:
-21px
-;
-width
-:
-21px
-;
-border
--
-top
-:
-1px
-solid
-#
-ccc
-;
--
-moz
--
-border
--
-end
-:
-1px
-solid
-#
-ccc
-;
 }
 .
 chatbar
@@ -16907,11 +16511,6 @@ toolbarbutton
 -
 icon
 {
-opacity
-:
-.
-6
-;
 -
 moz
 -
@@ -16920,39 +16519,6 @@ margin
 end
 :
 0
-;
-}
-.
-chatbar
--
-button
-:
-hover
->
-.
-toolbarbutton
--
-icon
-.
-chatbar
--
-button
-[
-open
-=
-"
-true
-"
-]
->
-.
-toolbarbutton
--
-icon
-{
-opacity
-:
-1
 ;
 }
 .
@@ -16973,61 +16539,6 @@ color
 :
 #
 f0f0f0
-;
-box
--
-shadow
-:
-inset
-0
-2px
-5px
-rgba
-(
-0
-0
-0
-0
-.
-6
-)
-0
-1px
-rgba
-(
-255
-255
-255
-0
-.
-2
-)
-;
-}
-.
-chatbar
--
-button
->
-.
-toolbarbutton
--
-text
-.
-chatbar
--
-button
->
-.
-toolbarbutton
--
-menu
--
-dropmarker
-{
-display
-:
-none
 ;
 }
 .
@@ -17093,146 +16604,8 @@ rgba
 )
 ;
 }
-.
-chatbar
--
-button
->
-menupopup
->
-menuitem
-[
-activity
-]
-{
-font
--
-weight
-:
-bold
-;
-}
-.
-chatbar
--
-button
->
-menupopup
->
-.
-menuitem
--
-iconic
->
-.
-menu
--
-iconic
--
-left
->
-.
-menu
--
-iconic
--
-icon
-{
-width
-:
-auto
-;
-height
-:
-auto
-;
-max
--
-height
-:
-16px
-;
-max
--
-width
-:
-16px
-;
-}
-.
-chatbar
--
-innerbox
-{
-background
-:
-transparent
-;
-margin
-:
--
-285px
--
-1px
-0
--
-1px
-;
-overflow
-:
-hidden
-;
-}
-chatbar
-{
--
-moz
--
-margin
--
-end
-:
-20px
-;
-}
 chatbox
 {
-height
-:
-285px
-;
-width
-:
-260px
-;
--
-moz
--
-margin
--
-start
-:
-4px
-;
-background
--
-color
-:
-white
-;
-border
-:
-1px
-solid
-#
-ccc
-;
-border
--
-bottom
-:
-none
-;
 border
 -
 top
@@ -17256,24 +16629,6 @@ radius
 2
 .
 5px
-;
-}
-chatbox
-[
-minimized
-=
-"
-true
-"
-]
-{
-width
-:
-160px
-;
-height
-:
-20px
 ;
 }
 .
