Bug 840703 - Remove unnecessary menulist binding from Fennec. r=mbrubeck
UltraBlame original commit: 6271f9482edecc9e6a30ea6a1c7ba257863f1da0

--- a/mobile/android/themes/core/content.css
+++ b/mobile/android/themes/core/content.css
@@ -2300,6 +2300,11 @@ active
 textarea
 :
 active
+xul
+|
+menulist
+:
+active
 {
 background
 -
@@ -2308,36 +2313,5 @@ color
 color_background_highlight_overlay
 !
 important
-;
-}
-xul
-|
-menulist
-{
--
-moz
--
-binding
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-content
-/
-bindings
-/
-menulist
-.
-xml
-#
-menulist
-"
-)
 ;
 }
