Backed out changesets 917205c79822 and e9ef1f1aa47d (bug 841413) for causing mochitest-chrome failure.
Failure is:
ERROR TEST-UNEXPECTED-FAIL | chrome://mochitests/content/chrome/toolkit/components/passwordmgr/test/test_privbrowsing_perwindowpb.html | uncaught exception - TypeError: normalWindowIframe is null at chrome://mochitests/content/chrome/toolkit/components/passwordmgr/test/test_privbrowsing_perwindowpb.html:266

UltraBlame original commit: 12db97d6f41fea852dac2d1eddb25a9ebb75245d

--- a/toolkit/components/passwordmgr/test/test_privbrowsing_perwindowpb.html
+++ b/toolkit/components/passwordmgr/test/test_privbrowsing_perwindowpb.html
@@ -25,20 +25,13 @@ script
 type
 =
 "
-application
+text
 /
 javascript
 "
 src
 =
 "
-chrome
-:
-/
-/
-mochikit
-/
-content
 /
 tests
 /
@@ -91,13 +84,6 @@ css
 href
 =
 "
-chrome
-:
-/
-/
-mochikit
-/
-content
 /
 tests
 /
@@ -107,6 +93,7 @@ test
 .
 css
 "
+/
 >
 <
 /
@@ -203,6 +190,19 @@ on
 test_notifications
 .
 html
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
 const
 Ci
 =
@@ -227,17 +227,16 @@ results
 var
 testpath
 =
+document
+.
+location
+.
+pathname
++
 "
 /
-tests
-/
-toolkit
-/
-components
-/
-passwordmgr
-/
-test
+.
+.
 /
 "
 ;
