Bug 841413 - Part 1: Convert test_privbrowsing_perwindowpb.html into a chrome test; r=jdm
UltraBlame original commit: e9ef1f1aa47deb430f2b21f979f40bae8c70a28d

--- a/toolkit/components/passwordmgr/test/test_privbrowsing_perwindowpb.html
+++ b/toolkit/components/passwordmgr/test/test_privbrowsing_perwindowpb.html
@@ -25,13 +25,20 @@ script
 type
 =
 "
-text
+application
 /
 javascript
 "
 src
 =
 "
+chrome
+:
+/
+/
+mochikit
+/
+content
 /
 tests
 /
@@ -84,6 +91,13 @@ css
 href
 =
 "
+chrome
+:
+/
+/
+mochikit
+/
+content
 /
 tests
 /
@@ -93,7 +107,6 @@ test
 .
 css
 "
-/
 >
 <
 /
@@ -190,19 +203,6 @@ on
 test_notifications
 .
 html
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
 const
 Ci
 =
@@ -227,16 +227,17 @@ results
 var
 testpath
 =
-document
-.
-location
-.
-pathname
-+
 "
 /
-.
-.
+tests
+/
+toolkit
+/
+components
+/
+passwordmgr
+/
+test
 /
 "
 ;
