--- a/layout/reftests/text-overflow/anonymous-block-ref.html
+++ b/layout/reftests/text-overflow/anonymous-block-ref.html
@@ -220,6 +220,19 @@ width
 5em
 ;
 }
+input
+{
+font
+-
+family
+:
+DejaVuSansMono
+;
+width
+:
+3em
+;
+}
 <
 /
 style
@@ -609,6 +622,56 @@ x
 <
 /
 div
+>
+<
+input
+placeholder
+=
+"
+pla
+&
+#
+x2026
+;
+"
+>
+<
+input
+dir
+=
+"
+rtl
+"
+placeholder
+=
+"
+der
+&
+#
+x2026
+;
+"
+>
+<
+input
+placeholder
+=
+"
+plaX
+"
+>
+<
+input
+dir
+=
+"
+rtl
+"
+placeholder
+=
+"
+Xder
+"
 >
 <
 /
