Bug 724554 - Don't exit fullscreen on window deactivate, just warn on refocus. r=dao
UltraBlame original commit: 77cdf45932a7c2af4f5491c48d20417cdc0a0609

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -2946,6 +2946,31 @@ screen
 -
 warning
 -
+container
+:
+not
+(
+[
+obscure
+-
+browser
+]
+)
+{
+pointer
+-
+events
+:
+none
+;
+}
+#
+full
+-
+screen
+-
+warning
+-
 message
 {
 max
