--- a/browser/metro/theme/flyoutpanel.css
+++ b/browser/metro/theme/flyoutpanel.css
@@ -47,12 +47,30 @@ fixed
 transition
 :
 transform
+550ms
+cubic
+-
+bezier
+(
 0
 .
-2s
-ease
--
-out
+1
+0
+.
+9
+0
+.
+2
+1
+)
+;
+transform
+:
+translateX
+(
+100
+%
+)
 ;
 font
 -
@@ -82,6 +100,30 @@ left
 right
 :
 auto
+;
+transform
+:
+translateX
+(
+-
+100
+%
+)
+;
+}
+.
+flyoutpanel
+-
+slide
+-
+in
+{
+transform
+:
+translateX
+(
+0
+)
 ;
 }
 flyoutpanel
