Bug 841511 - Cleanup and organize existing browser flyout settings and css. r=fryn
UltraBlame original commit: 9718c678cdde34ae45a29cced2a120658d92d744

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -3379,126 +3379,6 @@ rect
 ;
 }
 #
-about
--
-flyoutpanel
-{
-width
-:
-350px
-;
-background
--
-image
-:
-url
-(
-'
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-images
-/
-about
--
-footer
-.
-png
-'
-)
-;
-background
--
-repeat
-:
-no
--
-repeat
-;
-background
--
-attachment
-:
-fixed
-;
-background
--
-position
-:
-right
-bottom
-;
-}
-#
-about
--
-flyoutpanel
-label
-.
-text
--
-link
-{
-text
--
-decoration
-:
-none
-;
-color
-:
-#
-1167bd
-;
-}
-#
-about
--
-product
--
-label
-{
-font
--
-weight
-:
-bold
-;
-}
-#
-about
--
-version
--
-label
-{
-margin
--
-top
-:
-11pt
-;
-}
-#
-about
--
-policy
--
-label
-{
-margin
--
-top
-:
-24pt
-;
-}
-#
 download
 -
 button
@@ -3977,6 +3857,425 @@ rect
 important
 ;
 }
+flyoutpanel
+>
+settings
+:
+first
+-
+child
+{
+margin
+-
+top
+:
+0px
+;
+}
+#
+about
+-
+flyoutpanel
+{
+width
+:
+350px
+;
+background
+-
+image
+:
+url
+(
+'
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+images
+/
+about
+-
+footer
+.
+png
+'
+)
+;
+background
+-
+repeat
+:
+no
+-
+repeat
+;
+background
+-
+attachment
+:
+fixed
+;
+background
+-
+position
+:
+right
+bottom
+;
+}
+#
+about
+-
+flyoutpanel
+label
+.
+text
+-
+link
+{
+text
+-
+decoration
+:
+none
+;
+color
+:
+#
+1167bd
+;
+}
+#
+about
+-
+product
+-
+label
+{
+font
+-
+weight
+:
+bold
+;
+}
+#
+about
+-
+version
+-
+label
+{
+margin
+-
+top
+:
+11pt
+;
+}
+#
+about
+-
+policy
+-
+label
+{
+margin
+-
+top
+:
+24pt
+;
+}
+#
+prefs
+-
+flyoutpanel
+{
+width
+:
+400px
+;
+}
+setting
+{
+min
+-
+height
+:
+touch_row
+;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+-
+moz
+-
+box
+-
+orient
+:
+horizontal
+;
+}
+.
+setting
+-
+expanded
+{
+-
+moz
+-
+box
+-
+align
+:
+start
+;
+-
+moz
+-
+box
+-
+orient
+:
+vertical
+;
+}
+setting
+>
+vbox
+{
+-
+moz
+-
+box
+-
+flex
+:
+1
+;
+}
+settings
+{
+margin
+-
+top
+:
+32px
+;
+}
+.
+settings
+-
+title
+{
+font
+-
+weight
+:
+bold
+;
+}
+#
+prefs
+-
+flyoutpanel
+>
+setting
+{
+margin
+-
+top
+:
+16px
+;
+}
+#
+prefs
+-
+flyoutpanel
+>
+setting
+.
+preferences
+-
+title
+{
+font
+-
+weight
+:
+bold
+}
+setting
+[
+type
+=
+"
+integer
+"
+]
+>
+.
+preferences
+-
+alignment
+setting
+[
+type
+=
+"
+string
+"
+]
+>
+.
+preferences
+-
+alignment
+{
+-
+moz
+-
+box
+-
+flex
+:
+3
+;
+}
+setting
+[
+type
+=
+"
+file
+"
+]
+>
+.
+preferences
+-
+alignment
+setting
+[
+type
+=
+"
+directory
+"
+]
+>
+.
+preferences
+-
+alignment
+{
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+}
+#
+prefs
+-
+homepage
+-
+options
+#
+prefs
+-
+homepage
+-
+popup
+{
+min
+-
+width
+:
+200px
+;
+}
+.
+options
+-
+box
+{
+-
+moz
+-
+margin
+-
+start
+:
+28px
+;
+}
+.
+options
+-
+box
+>
+setting
+:
+last
+-
+child
+{
+border
+-
+bottom
+:
+0
+;
+}
+.
+preferences
+-
+description
+{
+font
+-
+size
+:
+font_small
+!
+important
+;
+color
+:
+grey
+;
+}
+.
+preferences
+-
+description
+:
+empty
+{
+display
+:
+none
+;
+}
 #
 start
 -
@@ -4318,270 +4617,6 @@ padding
 start
 :
 88px
-;
-}
-#
-prefs
--
-flyoutpanel
-{
-width
-:
-400px
-;
-}
-setting
-{
-min
--
-height
-:
-touch_row
-;
--
-moz
--
-box
--
-align
-:
-center
-;
--
-moz
--
-box
--
-orient
-:
-horizontal
-;
-}
-.
-setting
--
-expanded
-{
--
-moz
--
-box
--
-align
-:
-start
-;
--
-moz
--
-box
--
-orient
-:
-vertical
-;
-}
-setting
->
-vbox
-{
--
-moz
--
-box
--
-flex
-:
-1
-;
-}
-settings
-{
-margin
--
-top
-:
-32px
-;
-}
-.
-settings
--
-title
-{
-font
--
-weight
-:
-bold
-;
-}
-#
-prefs
--
-flyoutpanel
->
-setting
-{
-margin
--
-top
-:
-16px
-;
-}
-#
-prefs
--
-flyoutpanel
->
-setting
-.
-preferences
--
-title
-{
-font
--
-weight
-:
-bold
-}
-setting
-[
-type
-=
-"
-integer
-"
-]
->
-.
-preferences
--
-alignment
-setting
-[
-type
-=
-"
-string
-"
-]
->
-.
-preferences
--
-alignment
-{
--
-moz
--
-box
--
-flex
-:
-3
-;
-}
-setting
-[
-type
-=
-"
-file
-"
-]
->
-.
-preferences
--
-alignment
-setting
-[
-type
-=
-"
-directory
-"
-]
->
-.
-preferences
--
-alignment
-{
--
-moz
--
-box
--
-align
-:
-center
-;
-}
-.
-options
--
-box
-{
--
-moz
--
-margin
--
-start
-:
-28px
-;
-}
-.
-options
--
-box
->
-setting
-:
-last
--
-child
-{
-border
--
-bottom
-:
-0
-;
-}
-.
-preferences
--
-description
-{
-font
--
-size
-:
-font_small
-!
-important
-;
-color
-:
-grey
-;
-}
-.
-preferences
--
-description
-:
-empty
-{
-display
-:
-none
 ;
 }
 #
