--- a/layout/style/html.css
+++ b/layout/style/html.css
@@ -3574,6 +3574,65 @@ translate
 important
 ;
 }
+video
+>
+div
+{
+text
+-
+align
+:
+center
+;
+font
+-
+weight
+:
+bold
+;
+font
+-
+size
+:
+24px
+;
+pointer
+-
+events
+:
+none
+;
+}
+video
+>
+div
+p
+{
+color
+:
+gold
+;
+background
+-
+color
+:
+rgba
+(
+105
+105
+105
+0
+.
+4
+)
+;
+pointer
+-
+events
+:
+auto
+;
+}
 marquee
 {
 width
