Bug 841480 - Add Sync to Settings charm pane and move sync prefs to a new Sync panel. r=mbrubeck
UltraBlame original commit: e5c769a2741a28645e6d249934d0d91056df11d6

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -3873,6 +3873,16 @@ top
 ;
 }
 #
+sync
+-
+flyoutpanel
+{
+width
+:
+400px
+;
+}
+#
 about
 -
 flyoutpanel
@@ -4094,6 +4104,12 @@ prefs
 flyoutpanel
 >
 setting
+#
+sync
+-
+flyoutpanel
+>
+setting
 {
 margin
 -
@@ -4104,6 +4120,16 @@ top
 }
 #
 prefs
+-
+flyoutpanel
+>
+setting
+.
+preferences
+-
+title
+#
+sync
 -
 flyoutpanel
 >
