--- a/layout/forms/test/test_bug665540.html
+++ b/layout/forms/test/test_bug665540.html
@@ -245,6 +245,30 @@ SimpleTest
 expectAssertions
 (
 0
+3
+)
+;
+}
+else
+if
+(
+navigator
+.
+platform
+.
+startsWith
+(
+"
+Win
+"
+)
+)
+{
+SimpleTest
+.
+expectAssertions
+(
+0
 1
 )
 ;
