--- a/toolkit/themes/windows/mozapps/extensions/extensions.css
+++ b/toolkit/themes/windows/mozapps/extensions/extensions.css
@@ -1534,6 +1534,44 @@ png
 #
 category
 -
+service
+>
+.
+category
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+mozapps
+/
+skin
+/
+extensions
+/
+category
+-
+extensions
+.
+png
+"
+)
+;
+}
+#
+category
+-
 theme
 >
 .
