Bug 846056 - Create animation constants based on WinJS showPanel [r=mbrubeck]
UltraBlame original commit: 37016e66676a106b6d9efdea08cef95c5274d205

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -28,12 +28,8 @@ tray
 transition
 :
 transform
-0
-.
-2s
-ease
--
-out
+metro_animation_duration
+metro_animation_easing
 ;
 transform
 :
@@ -3161,12 +3157,8 @@ toolbar_height
 transition
 :
 transform
-0
-.
-2s
-ease
--
-out
+metro_animation_duration
+metro_animation_easing
 ;
 width
 :
