--- a/browser/metro/theme/flyoutpanel.css
+++ b/browser/metro/theme/flyoutpanel.css
@@ -1,3 +1,11 @@
+%
+filter
+substitution
+%
+include
+defines
+.
+inc
 flyoutpanel
 {
 height
@@ -47,22 +55,8 @@ fixed
 transition
 :
 transform
-550ms
-cubic
--
-bezier
-(
-0
-.
-1
-0
-.
-9
-0
-.
-2
-1
-)
+metro_animation_duration
+metro_animation_easing
 ;
 transform
 :
