Bug 404077:  Adjust annotations of expected assertions.
UltraBlame original commit: 934af7c3a7b0cbedc0fbb8cf9d72cb631a56262e

--- a/layout/forms/test/test_bug665540.html
+++ b/layout/forms/test/test_bug665540.html
@@ -228,6 +228,7 @@ javascript
 >
 if
 (
+!
 navigator
 .
 platform
@@ -235,7 +236,7 @@ platform
 startsWith
 (
 "
-Linux
+Mac
 "
 )
 )
@@ -246,30 +247,6 @@ expectAssertions
 (
 0
 3
-)
-;
-}
-else
-if
-(
-navigator
-.
-platform
-.
-startsWith
-(
-"
-Win
-"
-)
-)
-{
-SimpleTest
-.
-expectAssertions
-(
-0
-1
 )
 ;
 }
